6.12/I.Ming_history.md
## 2020/07/18

收到小林劍先生對字型命名設定的提議，以2020/04/13發佈的I.Ming-6.12.ttf、I.MingCP-6.12.ttf修改命名設定，字型並未收入2020/04/13後的字元編輯。公開發佈「I.明體」字型檔：I.Ming-6.12.ttf、I.MingCP-6.12.ttf，版本資訊爲Version 6.123。

## 2020/04/13

新增以下字元：
𦎫𤜀𪤯𫓜

修改或重修以下字元：
亯湻醕㪟䈞𠅩𠆌𡃥𡓑𡔊𡔋𢐻𢤈𢥦𢥲𣀦𣌘𤂸𤑴𤜃𤮩𥌲𥤁𥫉𥲮𥴀𦎧𦏧𦤘𦴒𧔫𧭺𨣶𨯢𨰩𨰮𨰯𪈷𦍋⺸哶䖹𠆆𠈾𠑫𡤮𡴟𢽁𢾴𢿩𣀄𤀱𤖁𤙢𤞢𥧳𦍟𦏙𦏚𧔠𧭫𨟪𨣳𩕸𩧣𪈋𮤨𡣌𣴱𤶪𦏡𢐯𦢃羋芈蝆𣶿𦰶𥂗𦹩𪆌

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.12.ttf、I.MingCP-6.12.ttf，版本資訊爲Version 6.122。

## 2020/04/09

修改或重修以下字元：
𣁳𰽔⁺⁻⁼⁽⁾₊₋₌₍₎𰻝𰻞 及 豎排全形句號

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.12.ttf、I.MingCP-6.12.ttf，版本資訊爲Version 6.121。

## 2020/04/03

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.12.ttf、I.MingCP-6.12.ttf，版本資訊爲Version 6.120。

## 2020/04/02

新增以下字元：
𪜈𦬨𠵇𱆥𩼕𱁬𬓋𬓑𰽔

## 2020/03/10-2020/04/01

新增以下字元：
㘔㨑䶶䶷䶸䶹䶺䶻䶼䶽䶾䶿彂拁敋朑砛鿏鿔鿖鿗鿭鿱鿳𠀾𠁞𢀛𢳪𣛮𣲩𣻸𣼎𤉙𤐙𤶃𤺪𤼵𥐵𥺆𦟪𦧷𧰎𧿬𨂿𨢑𨱏𩸙𩺪𪛗𪛘𪛙𪛚𪛛𪛜𪛝𪜀𪹚𪻕𫇃𫓧𫔭𫔮𫝏𫝘𫝛𫝻𫞭𫞼𫟂𫟧𫟷𫟼𫠛𫣆𫧃𫯛𫲨𫲸𬠖𬦰𬬭𬬻𬭊𬭛𬭳𬭶𬴘𬺞𭟰𰀀𰀁𰀂𰀄𰀆𰀠𰀡𰀢𰀪𰀫𰁜𰃦𰃮𰅭𰅱𰅲𰆊𰇉𰇑𰈢𰉏𰋀𰍧𰍨𰕣𰙜𰙩𰚋𰚼𰛄𰛅𰣻𰥏𰧆𰯲𰹬𰻝𰻞𰽩

## 2020/02/28

修改或重修以下字元：
㇌⼂𠄡㣇砼𤼲𬂛朡𦙗䐋䖙𧮙𮡸铿闲䞚㕱𢼛

## 2020/02/22

修改或重修以下字元：
𮂻𮇎

## 2020/02/20

新增以下字元：
〾𛀀廾⁺⁻⁼⁽⁾₊₋₌₍₎

## 2020/02/14

修改或重修以下字元：
ㆶ𠂉𭑊

## 2020/02/12

修改或重修以下字元：
𧠒𨢈㇃🀙🀚🀛🀜🀝🀞🀟🀠🀡

## 2019/12/27

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.11.ttf、I.MingCP-6.11.ttf，版本資訊爲Version 6.110。

## 2019/12/24

新增以下字元：
𬔖𮎳𧃭𥩮

修改或重修以下字元：
㔑亲𨐌𨐣𨐾𥩮𨤽𧄋𦏢𥌚𥄂塰𠦄𥎈𥎉𥎨𠤜𢁄𠦝㕜

內部釋出測試版本字型檔：I.Ming-6.107.ttf、I.MingCP-6.107.ttf，版本資訊爲Version 6.107。

## 2019/12/20：

修正一些字元的高度問題。

## 2019/11/19

新增以下字元：
𢑏

修改或重修以下字元：
归𨿀𠨔

內部釋出測試版本字型檔：I.Ming-6.106.ttf、I.MingCP-6.106.ttf，版本資訊爲Version 6.106。

## 2019/10/18

新增以下字元：
🀀🀁🀂🀃🀄🀅🀆🀇🀈🀉🀊🀋🀌🀍🀎🀏🀐🀑🀒🀓🀔🀕🀖🀗🀘🀙🀚🀛🀜🀝🀞🀟🀠🀡🀢🀣🀤🀥🀦🀧🀨🀩🀪🀫

內部釋出測試版本字型檔：I.Ming-6.105.ttf、I.MingCP-6.105.ttf，版本資訊爲Version 6.105。

## 2019/10/17

新增以下字元：
🩠🩡🩢🩣🩤🩥🩦🩧🩨🩩🩪🩫🩬🩭⚀⚁⚂⚃⚄⚅

## 2019/10/16

新增以下字元：
☯⚊⚋⚌⚍⚎⚏☰☱☲☳☴☵☶☷䷀䷁䷂䷃䷄䷅䷆䷇䷈䷉䷊䷋䷌䷍䷎䷏䷐䷑䷒䷓䷔䷕䷖䷗䷘䷙䷚䷛䷜䷝䷞䷟䷠䷡䷢䷣䷤䷥䷦䷧䷨䷩䷪䷫䷬䷭䷮䷯䷰䷱䷲䷳䷴䷵䷶䷷䷸䷹䷺䷻䷼䷽䷾䷿𝌀𝌁𝌂𝌃𝌄𝌅𝌆𝌇𝌈𝌉𝌊𝌋𝌌𝌍𝌎𝌏𝌐𝌑𝌒𝌓𝌔𝌕𝌖𝌗𝌘𝌙𝌚𝌛𝌜𝌝𝌞𝌟𝌠𝌡𝌢𝌣𝌤𝌥𝌦𝌧𝌨𝌩𝌪𝌫𝌬𝌭𝌮𝌯𝌰𝌱𝌲𝌳𝌴𝌵𝌶𝌷𝌸𝌹𝌺𝌻𝌼𝌽𝌾𝌿𝍀𝍁𝍂𝍃𝍄𝍅𝍆𝍇𝍈𝍉𝍊𝍋𝍌𝍍𝍎𝍏𝍐𝍑𝍒𝍓𝍔𝍕𝍖

## 2019/10/15

新增以下字元：
𝍠𝍡𝍢𝍣𝍤𝍥𝍦𝍧𝍨𝍩𝍪𝍫𝍬𝍭𝍮𝍯𝍰𝍱𝍲𝍳𝍴𝍵𝍶

## 2019/10/13

新增以下字元：
凣𠃬𤽄𥃭𫥞𭴘

修改或重修以下字元：
𠃛𩰊𠦂𦚏丣戼丵卨禼𡨄㒳㇒耂⺹

內部釋出測試版本字型檔：I.Ming-6.104.ttf、I.MingCP-6.104.ttf，版本資訊爲Version 6.104。

## 2019/10/12

修改或重修以下字元：
𬎿𣋔𤐇𭬋𭺀𠒇

## 2019/10/11

新增以下字元：
𥜶𪭆𩵊

修改或重修以下字元：
夔巙犪虁躨𢆃𧅄𡖂𨈉𩵉

## 2019/09/19

修改或重修以下字元：
馷𠰼𫎕𠆴𢅈

內部釋出測試版本字型檔：I.Ming-6.103.ttf、I.MingCP-6.103.ttf，版本資訊爲Version 6.103。

## 2019/08/07

新增以下字元：
𤆛𡮙

內部釋出測試版本字型檔：I.Ming-6.102.ttf、I.MingCP-6.102.ttf，版本資訊爲Version 6.102。

## 2019/08/06

修改或重修以下字元：
𤕫𩡬癶⽨彐𡊮𧀍𠚖⻓𠠇𠛁

## 2019/08/05

修改或重修以下字元：
鏡音鈴连

內部釋出測試版本字型檔：I.Ming-6.101.ttf、I.MingCP-6.101.ttf，版本資訊爲Version 6.101。

## 2019/08/04

修改或重修以下字元：
阵⻋车轧轮软轻轼岛枭谁雠𬼸丫

## 2019/07/18

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.10.ttf、I.MingCP-6.10.ttf，版本資訊爲Version 6.100。

## 2019/07/13

李爾樅因時間資源問題，暫時未能進一步跟進標點改造部份，將在以後版本繼續修改。內木一郎決定以目前的修改成果釋出，以配合《推薦形體表》之頒佈。

內部釋出測試版本字型檔：I.Ming-6.090.ttf、I.MingCP-6.090.ttf，版本資訊爲Version 6.090。「CP」版本爲標點改造版。

## 2019/06/12

修改或重修以下字元：
罙堔探棎深琛賝㤾𠟘𠫃𢊖𦜊𦸂𧨾𩤞𩴙

## 2019/06/10

修改或重修以下字元：
𧆨𧆣𧇏𤱁𤱤𧈕𢍁

## 2019/05/26

修改或重修以下字元：
嶲𡻎㩗觽㒞㰎㼇𡣸𢤮𢹂𦢥𧮄𧲑𨟎𩟥𩧎𩽌处脒嗱豣姗删𡊢𩒄䈀𣇢𣌧𣆑旪𩽈翠羿轂邃𮄜

## 2019/05/20

修改或重修以下字元：
偋凞厖旆𡴩陧涅捏䲗胩脎罱䈒𡣤麘𠸎埪港𧡥𢛖呆窙㫴𠭂𡦊𩱞𩳔﨧佧

## 2019/05/10

修改或重修以下字元：
萾鈗馻瓚㞣贗㷳毄咽姻栶欭氤洇烟珚秵筃絪胭茵裀銦铟鞇駰㘻㧢㸶䂩䄄䍰𠗃𠛭𡜭𤝱𤯠𧊭𨋳𨡤𩂥𩎪𩶾𪔗𪜶笝𢇵𣃳𣲷𦊔𦭁𦸖𧉫夃𢒀

## 2019/05/05

新增以下字元：
𠵝唨𥑮𨋍𠺪𢬊𫥾𠺗𢋊𪅙𣏴𠱂𠱃𧘹𢰸𠵾𧚔𠌥𧋦𩬎艔𡃴𨂾𩜠𡃇𨃩𡃈𨭌𤆣𧴯𧵳𦻐𦢓塂𢹂

## 2019/05/01

新增以下字元：
㋿ㆼㆽㆾㆿ

## 2019/04/27

由李爾樅跟進張睿熹（音譯）的標點符號測試意見。

## 2019/04/20

內部釋出測試版本字型檔：I.Ming-6.011.ttf，版本資訊爲Version 6.011。

同時規定日後版本資訊的格式：
* 公開字型檔的版本資訊使用小數點後兩個位；內測字型檔則使用小數點後三個位。
* 每次內測更新時，更新千份位數字。
* 小型更新，例如只添加或修整寥寥幾個字，更新百份位數字。
* 添加或修整數十字至百餘字，或針對一兩個部件作統整改動，更新十份位數字。
* 重大更新時，更新個位數字。

## 2019/04/01-20

由劉某兄及李爾樅調整全半形和標點問題。

## 2019/02/01-2019/04/01

由鍾啟堯、伍梓豪負責測試全半形和標點問題，於內部提交意見。

## 2018/12/27

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.00.ttf，版本資訊爲Version 6.00。

## 2018/12/24

內部釋出測試版本字型檔：I.Ming5.90.ttf，版本資訊爲Version 5.90。

## 2018/12/20

修改或重修以下字元：
𭥍𣅀

新增以下字元：
乁

## 2018/12/16

李爾樅內部釋出測試版本字型檔：I.Ming5.24.ttf，版本資訊爲Version 5.24。

## 2018/12/09-16

發現豎排、語系等有重大問題，李爾樅及其朋友全力修復，伍梓豪、陳志泓、陳柏逸、鍾啟堯、陳輝恒、內木一郎、Extc等協助測試和給予意見。最終重建豎排和語系設定，同時收復「IPAmj明體」裏「Em Dash」設定爲非全形內縮字元的問題。過程中內部釋出了數個測試版本。

## 2018/12/08

修改或新增以下字元：
：；〚〛…︙⁇⁈⁉‼☚☛☜☝☞☟←↑→↓⇦⇧⇨⇩↖↗↘↙⇄⇅⇆⇇⇈⇉⇊⇵⁰¹²³⁴⁵⁶⁷⁸⁹₀₁₂₃₄₅₆₇₈₉½↉⅓⅔¼¾⅕⅖⅗⅘⅙⅚⅐⅛⅜⅝⅞⅑⅒⅟─━│┃┌┏┐┓└┗┘┛├┝┠┣┤┥┨┫┬┯┰┳┴┷┸┻┼┿╂╋┍┎┑┒┕┖┙┚┞┟┡┢┦┧┩┪┭┮┱┲┵┶┹┺┽┾╀╁╃╄╅╆╇╈╉╊═║╒╓╔╕╖╗╘╙╚╛╜╝╞╟╠╡╢╣╤╥╦╧╨╩╪╫╬╭╮╯╰╱╲╳

內木一郎內部釋出測試版本字型檔：I.Ming5.20.ttf，版本資訊爲Version 5.20。

## 2018/12/03

修正以下字元的編碼：
𮟝𮟀

## 2018/12/02

修改、重修或新增以下字元：
𣥂劌嚬埗徏捗步涉濒瀕荹蘋踄陟頻顰频颦騭骘㰋㻉㾟䑰䤮䮹𠉡𠌹𠐺𢧁𣥩𣥿𣦖𣦦𣦧𣦫𣻣𤫻𥹴𦇖𧌂𧔪𧭹𧮝𧼝𨛒𨽗𨽥𩊶𩓯𩔤𩕘𩖓𩣝𩷖𪌷𮕃䧬𢕱𥒼𨖸𨞣𣝣𮝾印茚鮣𡊶𢂗𢬃𣦫𨒦𩬵承𢬬頲𨩪𣎗烿𣪂𪚘旃栴㮵𣪂𩔣𪚘𡵂𡵉𢼸𪢧戎娀毧狨絨绒羢茙蠈賊贼駥鱡㣝㭜䄾䘬䯷𠈋𠲦𡊸𢫨𣉝𣛸𣴛𣿐𤇽𥅯𥑳𥬪𦕧𦽒𧊕𧒿𧜆𧻪𨀻𨆎𨠤𨱿𩶺𪀚𪀵𫂽

## 2018/12/01

修改、重修或新增以下字元：
𥋣𠨲𣘫𠃓𪉷𡅿𡤲𣡣𤅦𤓠𥍗𥜸𥸖𥾁𧅸𧖋𨟬𨤌𨰳𩧤𩽶𭂅𥩭𥩮𨮺𩝚𨖀𤠷𨷺𥤚𥤛㔿㢟𡵂𡵉𢼸𣚯𣫎濲𢡱𩌥𢢢𣪸𣫉𣫪𥵠𦾫𣝝𣫀𦎼𧐜𧞒𧞹𧞺𩏻𪇂𪇗𪍥𪖃𠢔𠥝𡩾𢄠𢋔𢕓𢿛𣉾𤁮𤛐𤠾𤹪𥱸𧏺𧞨𨄅𩀫𩔸𩪍𪛃𧦅𨸟𫞪𠥄𡄵𡤖𣫥𣫫𤻢𥏏𧏽𧜤𧢂𧫦𧮒𩥯𩮵𫩠𨓵郑𨜟𨞀坣𥊲𥋤𥢷𥤗𥳦𥳶𥸈𥼽𥽻𦗴𦡁𦺡𦼲𧅗𧒾𧨲𧭢𨅨𨆉𨎋𨎖𨎴𨝦𨞱𨟐𨡔𨣛𩀯𩘽𩙆𩞦𩟈𩼉𩼝𩽳𪄹𪇁𫄗𫉒𫙲𫠝𫷑𬩖𣙟𣰎𡖹𡗑𡠠𡭿𡽊𢴤𢿦𢿧𣀏𣃉𣎲𣥺𣪼𣰎𣾦𤔶𤗾𤛋𤢎𥊰䶄𠁈𠓧𡛚𢧶𣿋𤇠𤗭𤝘𤵡𤹣𥕕𥬏𥲉𧗌𧦝𨝘𨻲𩄗𩶈𪏹𪕉𠥫𡯜𡯠𢽦𥄴𥐄缢谥𡺬𣣼𤸸𥂺𥃠𦶩𧆇𧔈𨜶𨶂𨽪𪕶𬦜𬧬𥏟𠣸𠤀𠤇𠧫𠧺𠨢𠳰𠹐𠹘𠿆𡕞𡕟𡕠𡕡𡕢𡕣𡕧𡕨𡕪𡕫𡕬𡕭𡕯𡕲𡕴𡕶𡕹𡕺𡕻𡕼𡕽𡕾𡕿𡖀𡖁𡖃𡰿𡱥𡲲𡳉𡶣𡺷𡽀𢈡𢋌𢋣𢌂𢌉𢏤𢔃𢕛𢖒𢖻𢙴𢜤𢟜𢥀𢧇𣖱𣘅𣲋𤧯𤫘𤲋𤹉𥋂𥍬𥜚𥜱𥜷𪗓𥜹𥣯𥧜𥨏𥻴𥽟𦂊緮𦜄𦞶𦥍𦫝𦯩𦱛𦱟𦲯𦴅𦴲𦷜𦹿𧀥𧃰𧚉𧾤𨇄𨌘𨎙𨒥𨕟𨛐𨢽𨣪𨫙𨻅𨿓𩂫𩃃𩅆𩈥𩊻𩍫𩍳𩎋𩡘𪄂𪊴𪕞𪗒𪘑䝜𠣟𦶬𦾹𩆑𩓀𨬜𤻅𥴨𧓁𨙤𪇈𪌛𭼵𮠸𮬆𭐫𧛓𥔮𠢅𠢍𦂇𦞬𧩅𧪤𮘭屮練𠄈𠟇𠥢𠬂𡣆𡩣𡰚𡳞𡶷𡽤𡿑𡿠𢋑𢠴𢣶𢫰𢿻𣁣𣃌𣔕𣽘𤏞𤐪𤗷𤡩𤢯𤪏𤯷𤰀𤳩𥌌𥠹𥬫𥳞𥶒𥷖𥻋𥻘𥼭𦆞𦌬𦌳𦒪𦨁𦨃𦨄𦨅𦨆𦵴𦺸𧁽𧂌𧃮𧅊𧎩𧤠𧰢𧲂𨃥𨆴𨌤𨏏𨞁𨞧𨽃𩕔𩕶𩕼𩞻𩦆𩴠𩼩𪋲𪋷𪍴𫙮𬠴𢈣𦯎𢰕𤴙𢱰𦀙𧋙𨦱𥎋𥡥𦃍𦠷𧜢𩣢䡯𢤄𤁬𨢨𣞷𧁗䉥𦇎𨣼𥀮䇱𨞉𩬼𣶓𣖴𧨼𢰕𤴙𢱰𦃍𦠷𭫢𠦘𡊼𣽆𤤶𥯹𥰺𥳎𦩺𦵶𦶐𧏤𩢽𩬰𪀛𡑤𡢔𡰟𤰑𡳴𢺆𢺑𣜄𣟅𣠾𤼘𥢵𦆁𦣖𧄿𧅋𧆃𧕳𧝹𨏩𨭞𨰠𩼊𠙜𣎆𤬨𥃵𨙮䏎𠕵𠘻𠫨𢼐𣑃𧆉𧕺𨈔𨥵𩖛𩛳𩶞𪞖鿄𫞿㻚𥂀㞍𡴿𡵎𢓃𤴯𠌢𪐟𡕞𬯸𫕣𬵄𠅩𤴢𠪑𩪿㝪𢳊𣯭𤮅𥡩䉅𦄌𨄧𣞕𩅀𩻉𩉝𠮫𧮭㼿𠿜𡁓𡊝𡍻𡧗𡹳𡿕𢣓𢭨𣐎𣝚𣞑𤁦𤐱𤫣𤬦𤬧𤬩𤬪𤬬𤬭𤬮𤬰𤬳𤬵𤬶𤬷𤬺𤬼𤬿𤭀𤭁𤭂𤭃𤭄𤭌𤭍𤭎𤭏𤭐𤭑𤭒𤭓𤭔𤭕𤭗𤭘𤭛𤭜𤭝𤭞𤭟𤭠𤭡𤭢𤭣𤭦𤭧𤭨𤭩𤭪𤭫𤭬𤭰𤭱𤭳𤭴𤭹𤭺𤭻𤭼𤭽𤮀𤮅𤮆𤮇𤮈𤮉𤮊𤮋𤮎𤮏𤮐𤮓𤮔𤮕𤮖𤮘𤮙𤮚𤮛𤮜𤮡𤮢𤮦𤮧𤮨𤮩𤮪𤮫𤮭𤮮𤮯𤮰𤮱𤮲𤮳𤮵𤮷𤮸𤮹𥌯𥲁𥶸𥷖𦉐𦍭𦓓𦨆𦭈𦾳𧂛𧓐𧔀𧞕𧞙𧭌𧰓𨀄𨋐𩆣𩌯𩐛𩼭𬅎𬎨𬎫𬫱𩱵𩱷𩱸𢇒𢇓𢴰𧗒𧰙𨗂𩴪𪙧𣳩𪮲𫙩𬝩𬳰㙅㳭𢉣𣮃𣯂𤞥𤥯𥧷𦽻𧜯𨲃𩭚𩭼䢤𠮁𠰲𡊍𣏂𣪩𥑡𦸇𧺶𩳘𩳙榝𠝨𢄌𢘹𢞒𢫬𣈎𣉜𣻑𤍁𥓑𥤔𥻦𦃏𧏫𨐖𩗉𩮫𩴇𪀣𪄅𪑂剏剙㔙㤣㶜㻂䈂䑫䔊䦕䴵𡳧𡸫𡾛𢆛𢆟𢆢𢆣𢏳𢔧𢼩𣁊𥧋𥩵𥲂𥵪𦉇𦉐𦝷𦴏𧁕𧳉𧻓𧼦𧼲𨂲𨍍𨗙𩂦𩅅𩊖𪋋𪑰𪕒胼㕃䊙䍾䙹䢎𢍫𢓄𢝐𣥎𥓨𧗦𧙒𨃿𨊻𨡶𨢏𨢹𨲡𪂍𪗛𥈪𥤴𨕧𨘊𨴂𨶘𠱥𢍃𣮡𣽑𥑾𦯨𨁼𨃦𩚰𩝼𩣺𪑖𠻶𦮁𦯨𦱱𦳕𦴮𦸟𦻪𦿢𦿩𦿪𧁕𧂑𩅁𬝭𬞦 𦮁𦯛𦱱𦳕𦻪𦿔𦿩𦿪𧂑𠻶𦯸𦱤𦲇𦲈𦴮𦴰𦴳𦵝𦶪𦶭𦶯𦸳𦹈𦹉𦹊𦹍𦻟𦻠𦻡𦻢𦻣𦻥𦻦𦻧𦻨𦽷𦽸𦽹𦽻𦿠𦿢𦿣𦿤𦿥𧁕𧁗𧁻𧂱𧂳𧂴𧂵𧃺𧃻𧄩𧄫𧅎𧅏𧆁𧆚𦱓𦮁𦱠卿𠩥𡙮𣗐𧡈㹶𢌦𢽄䅍𥆑𥏎𤠜𦐿𣉡𨉈䩠䯕𦪅䱓𪊶𣪷𠿦𡅚臖䕟𡃳𢑅𢤀𢸁𦢯𦧅𤾒𦕍𧣍𨊶𨠁𨱤𩂸𩈌𩣤𩵨𪐨𪕁𨒆𡖢㔰𠄨迯𢫑𫊰𠨃𧵏𨳿𫒓𩊃𠨊𦍮𥮢𨛄𨜈𢬆𤈓𤷨𦛑𦮊𨔚㱘懕擪檿𣎩靨饜魘黶嬼懰藰䉧䬟𢤐𢷶𣞗𨮸𩙔昞邴㑂䇤𠅈𠇮𠛥𢨿𣍢𣍣𣍠𣍤𣍦𣍧𣍮𣍲𣍷𣍸𣍹𣍺𣎄𦚹𣎅𣎔𣎚𣎛𣎣𣎭𣎱𣎲𣍬𣍵𦛵𣎤𠻻𡺵𢩱𢲾𤝦𤿋𡶶𣧒𣴰𦽬𧗛𪄍鳏𣯉𣎕𤸄𧎖𢱣揑毁湼譭𢾌𧝷𡔤𡜫𣪂𩔣𪚘𢭉𦖐𨡒𨨳𨚶𨚽𨴞𣽮𤕁𤕆𤮫𨗽鿆𥙀𥙖𢆀𣄀𥵏𣛣𦼠𫙸𢑪𢑳𣪣値𣤳𥜩𠔬𨂒𪍅𬂃𨵷𩟣𪓲𥠅𥦺𫙪𧮭谻𧮷㲰𡫃𧕝𥩒𣡈𡢓𤗦𥴩𥵰𦃔𧒘𧬭𦮘𦭯𥩭𥩮䑐𤉟㣒㬝㽪䁬䆵䉕䎖䒏䙢䰝𠟂𡡑𡪠𡾽𡿘𢅋𢎒𢐞𢐷𢨉𢴣𤎯𤎰𤛢𤺧𤾥𥃙𦌝𦠇𦼏𧢐𧲅𧸑𨲯𩱭𪒟𪗐𪙭𪴕𬅎赣𡘢緰𢟿𤖼𥙎𥯠𥿯𦽤𧖴𧠨𧡒𧵬𨴳𩈛𪃻𩥆𩥜斊𦔋𦕺𦗊𪕔𬵺㚎㛊鏫䯁乊带濲緮隡練𠀤𠂎𠂒𠃓𠇇𠢍𠢅𠳮𡃶𡆢𡕥𡧑𡩵𡯦𡴒𡵉𡵂𡷔慤𢴇𢼸𣎆𣎗𣑫𣚯𣛯𣧷𣫎𤣥𤬾𤱧𥋕𥔮𥙨𥞛𦉶𦍍𦚩𦛱𦛵𦣅𦰋𦵕𦹗𧈮𧊶𧧨𨐖𨜊𨦾𨩪𩌥𩬻𪗓𪘉𪥌𤮤𪼾𫠎𫠤𫠩𫥎𫩠𫵖𬀽𬐼𬡖𭃂𭠍𭩮屮𡌧𢛨𢮁𣨝𤂷𤉪𤥽𩩘𩩦㓭㔠㡫㬞㵣㵧㷎㹇䅥䈓䋵䔽䔾䕣䗶䥟䦪䨠䫘𠂄𠥜𠾩𠿒𡇼𡽙𢆜𢇋𢉥𢎔𢢖𢢚𢶆𢷒𣂰𣨵𣰌𣿌𤢔𤩲𤸎𤺐𥀥𥈎𥢸𥴭𥻉𦅶𦝲𦤦𦩥𦪬𦼰𦼵𦿋𧇷𧝶𧝽𧼨𨆍𨉪𨞛𨭛𨲲𩍛𩦏𩦞𩩲𩮂𩯝𩹄𪆰𪑦𪓮𪕭𪘹𪙰喝褐謁𨗇㰈𮟀𮟝𬽦𢺬𬾿𭂅𭅺𭅽𭉘𭩥𭏀𭑑𭕉𭕋𮉰𭙣𭣱𭤀𭤊𭥬𭬐𭭃𭵜𭺾𭼵𮃎𮆃𮆴𮆽𮈵𮊿𮋀𮌔𮍛𮎦𦬳𮎰𮎷𮎧𮎵𮏄𮎾𮏑𮏖𭪙𮏩𮏼𮏻𮐃𮐻𮐼𮑊𮑶𮑚𫉬𮒗𮓈𮓣𮖥𮖿𮗀𮗁𮗨𮘸𮝝𮠸𮡄𮢉𮪠𮫘𮬬𬽙𬾹𠄗𭎈𭂔𭂚𫦱𭅟𭊏𭌰𭍏𭐮𭐢𭑚𭒑𭓳𭛧渓鶏𧮾𨿸𩤻𭛳𮛪𭜈𭢘𭦽𭫯𧏪𭬯𭑖𭰣𭵙𤏁凞𠘕煕𭶉𤀠𭵝𭵨𭶂𭵺𭸡𭻙𠤤𮄧𮄱𮅰𮆆𮇞𮉈𮋚𮋦𮋹𮏞𮑝𮑛𮑜𮗬𮘹𮝼𮟐𮡼𮢍𮢿𮣕𮦢稲㴞㷔𨂻𨺻𮘦𮧲𮩁𮨍𮩳𮪻𮬹𮮆𮯌𡊊𦒸𠙾涄䛣尐鿫鿬𣄳𮎁𮍨 災甾輜𦤶㗴𤾲㧡攑躼𠊎𠕆𠕇𢪱𢱋𧊅𨃰㧒揻𡟓𤆪𤆬𥰔𥴊𪜶𫝺𣍐覅𧟰𡠍甮𨖕抇迉咘泹迖俖氠炾凎唦娳迼堔崰敨湹舿萛塯蒆蒏榚滱蓛踍駇儊踙敿橶瞣蕱蕵螁瞷礂繌謢矂藞藲鞷韟蠤巕爦𡿒

## 2018/04/03

修改或重修以下字元：
皆偕勓喈堦媘揩楷湝煯瑎稭蒈蝔諧谐鍇锴階鶛龤㾬䃈䡡𡺓𢔡𢾆𤭧𥍾𥏪𥚺𥻄𦂄𦎥𦝨𦞉𧳧𩀊𩋧𩘅𩘗𩤠𩩰卂扟汛煢籸茕蝨訊讯軐迅阠鳵㭄㷀䒖䭀𠎽𣈟𣜧𣥇𤜢𤬫𤽰𥃴𦽓𧮬𧿅𨾑𩑓𩡰𩡵𪜖𤣭𧈲𤣲㒏鋵㕔荣厢㕑厨甎璋𤉢

## 2018/04/01

I.字坊製作部改由李爾樅、內木一郎擔任主製作人，陳輝恒擔任聯合製作人，鍾啟堯、陳志泓、佟藍歌、Extc擔任聯合製作人。

## 2018/03/24

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-5.10.ttf，版本資訊爲Version 5.10。

## 2018/03/13
內部釋出測試版本字型檔：I.Ming-5.02.ttf，版本資訊爲Version 5.02。

## 2018/03/12

新增以下字元：
隡𠳮ㄮㄯ㚎乊𠂒𠇇𡆢𡕥𡧑𦹗𪥌𫠤𭃂𭠍带𬺰𬼀𬼜𮆨𮣙𬽦𭃄𭘍𭎎𭜣𭢫𭬒𭰉𭼰𮐓𮙝𮜿𮝬𮦷𭌦𮊶𭍞𡘇𭕍𭠉𢺬𭧳𣎟𭭊𭳛𭵇𭶸𮍎𭻐𮀸𮁳𦦔𮃄𮃖𮇻𮊘𮊖𦖏𬻀𮭴𮙣𮟾𮫄𮫗𮓖𮭭𬺱𬺳𬺶𬻂𬺻𬻆𬻋𬻒𬻝𬻜𬻞𬻻𬼂𬼁𬼄𬻿𬼆𬼈𬼌𬼗𬼖𬼙𬼚𬼸𬺵𬺸𬺺𬼺𬼽𬼾𬼿𬽃𬽆𬽇𬽉𬽈𬽌𬽊𬽋𬽖𬽕𬽡𬽣𬽹𬾗𬾊𬾘𬾨𬾮𬿂𬾿𬿦𬿲𭀀𬿻𭀗𭀘𭀚𭀙𭀜𭀟𭀠𭀣𭀡𭀥𭀤𭀰𭀱𭁄𭂯𭁆𭁐𭆢𭵄𮊆𭁔𭁠𭁡𭁢𮉼𭁩𭁣𭁪𭁫𭁯𭁭𭁳𭁺𭁷𭁻𭂁𭂅𭂾𭃆𭃅𭃌𭃡𭃙𭃚𭃨𭃥𭃲𭃭𭄏𭄘𭄞𭄣𭄫𭄧𭄴𭄹𭅂𭅃𭄿𭅅𭅊𭅐𭅑𭅒𭅘𭅝𭅡𭅩𬻁𭅲𭅴𭅳𭅵𭅺𭅽𭆆𭆇𭆉𭆏𭆙𭆡𭆞𭆤𭆥𭆪𭆫𭆬𭆯𭆴𭆶𭇁𭇥𭇢𭇪𭈆𭍠𭈬𭉙𭈹𭈼𭉘𭉈𭉵𭊌𭺮𭉿𭋛𭋘𭌔𭌌𭍥𭍼𭖒𭩥𭎙𭎕𮎺𮎹𭏀𭏕𭏛𭐀𭐖𭐣𭐬𭐱𭐴𭐳𭐸𭑃𭑅𭑊𭑑𭑒𭑏𭑕𭑘𭑟𭑣𭑨𭑵𭑾𭑿𭒡𭒭𭓂𭓔𭓗𭓩𭓯𭓾𭓿𭔅𭔃𭔄𭔀𭔖𭔬𭔲𭔱𭔵𭔹𭔸𭔿𭔾𭕇𭕉𭕋𭕐𭕒𭕘𭕝𭕭𭕾𭕿𭖀𭖄𮉰𬽍𭖱𭗒𭗓𭗞𭗻𭗼𭗾𭗿𭘀𭘆𭘉𭘊𭘞𭘧𭘣𭘴𭘾𭙌𭙗𭙣𭙻𭙺𭚃𭚓𭚒𭚘𭚡𭚥𭚨𭚵𭚸𭚹𭚼𭛁𭛋𬻈𬻑𬻘𬻥𭐕𭛠𭛩𭜎𭜍𭜴𭜤𭜥𭜦𭜧𭜵𭜳𭞅𭞋𭞌𭞥𭞐𭞹𭟝𭟞𭟯𭟲𭟶𭟼𭟾𬻐𭠂𭠅𭠡𭠘𭠠𭡠𭢆𭣔𭣢𭣣𭣩𭣯𭣰𭣱𭣬𭣴𭣵𭣹𭣸𭣻𭣺𭣚𭤁𭤂𭤀𭣾𭤊𭤋𭤏𭤓𭤟𭤥𭤧𭤪𭤩𭤮𬻵𬻷𭤽𭥆𭥍𭥎𭨘𭥟𭥗𭥫𭥬𭥭𭦃𭦗𭦌𭧂𭧑𭧟𭨗𭨽𭩡𭩠𭩱𭩲𭪁𭪀𭪗𭪖𭪕𭪵𭫎𭪴𭝠𭪙𭱁𭫈𭫒𭫝𭫘𭫟𭫞𭫺𭫳𭫬𭬐𭬑𭬜𭬨𭬳𭬺𭭃𭭋𣢸𭭏𭭎𭭓𭭔𭭕𬼘𬼫𭭩𭭾𭭽𭮁𭮀𭮅𭮈𭮑𭮖𭮣𭮭𭮰𭮱𭮶𭮳𭮺𭮻𭮼𭯇𭯰𭯴𭰁𭰋𭰊𭰐𭰏𭰖𭰦𭱂𭰹𭱡𭲑𭳏𭳍𭳺𭳿𭴑𭴚𭴙𭴷𭴾𭴺𭵈𭵡𭵠𭵜𭵼𭶊𭶡𭶪𭷣𭷰𭷺𭸣𭸮𭸽𭹕𭺆𭂬𭺛𭺜𭀝𭺣𭺥𭺧𭺫𭺪𭺳𭺸𭺺𭺿𭺾𭻊𭻉𭻗𭻥𭻩𭻨𭻰𭻯𭻵𭻴𭻺𭻿𭼂𭼃𭼅𭼋𭼖𭼵𭼽𭐝𭼾𭽁𭽂𭽆𭽇𭽒𭽪𭽼𭾂𭾆𭾋𭾊𭾏𭾐𭾜𭾟𭾩𭾪𭾱𭿓𭿗𭿜𭿥𭿪𭿵𭿶𭿷𭶗𮁌𮁨𮁮𮂊𮂞𮃎𮃛𮃢𮃣𮩦𮃻𮄒𮄜𮄣𥬃𮅃𮅏𮅒𮅙𮅕𮆃𮆴𮆽𮇀𮇂𮇓𮇣𮇬𮈅𮈄𮈋𮈔𮈑𮚄𮈛𮚇𮈣𮈵𦃋𮈱𮈷𮉗𮉟𮉵𮊁𮊄𮊂𮊓𮊔𮊌𮊒𭃱𮊫𮊵𮊷𮊺𮊸𮊿𮋀𮋊𮋒𮋝𮋻𮌁𮌄𮌆𮌇𮌋𮌒𮌖𮌔𮌚𮌕𮌜𮌩𮍄𮍉𮍌𮍍𮍐𮍛𮍠𭁇𭁈𮍥𮍨𮍲𮍹𮎁𮎅𮎆𮎋𮎓𮎗𮎛𮎜𮎦𦬳𮎰𮎷𮎧𮎯𮎵𮏄𮎾𮏋𮏀𮏑𮏖𮏓𮎿𮏔𮏩𮏼𮏻𮐃𮐦𮐮𮐥𮐼𮑊𮑶𮑚𮒐𮒗𮒚𮒨𮒙𮒫𮓈𮒿𮒹𮓋𬻉𭅯𮓗𭅰𮓙𮓘𮓚𮓜𮓞𮓠𮓡𮓣𮓥𮓰𮓱𮓵𮔁𮔇𮔔𮔉𮔝𮕂𮕃𮕈𮕒𮕔𮕛𮕜𮕝𮮠𮕡𮕩𮕫𮕪𮕱𮕺𮖚𮖠𮫟𮖥𮖾𮖿𮗀𮗂𮗁𮗃𮗘𮗚𧢛𮗠𮗟𮗨𮗮𮗷𮘁𮘂𮘈𮘎𮘐𮘪𮘦𮘤𮘭𮘸𮘾𮙆𮙅𮙘𮙛𮙞𮙟𮙠𮙪𮙮𮙲𮙿𮙾𮚃𮚆𮚅𮚋𮚌𮚑𮚖𮚶𮚸𮛩𮜒𮜬𮝇𮝝𮝻𮝾𭆒𮞂𮞅𮞆𮞘𮞭𮞷𮟃𮞽𮟞𮠑𮠕𬻕𮠖𮠚𮠶𮠸𮡄𮡉𮡌𮡱𮡿𮢉𮢟𮢤𮣐𮣑𮣹𮤇𮤨𮤩𮥌𮥏𮥓𮥚𮥃𮥶𮥺𮥹𬽜𮥿𮦂𮦄𮦆𮦟𮧇𮧊𮧌𮧓𮧞𮧟𮧰𮧯𮧮𮨀𮨇𮨈𮨦𮨷𮩑𮩼𮪇𮪍𮪜𮪠𮪦𮪬𮫇𮫎𮫏𬼍𮫖𮫘𮫙𮫮𮫭𮫬𮫯𮫰𮫲𮫴𮫳𮫽𮫼𮫺𮫾𮬁𮬂𮬉𮬆𮬏𮬎𮬔𮬓𮬘𮬗𮬬𮬲𮬼𮭘𮭝𮭟𮭱𮭶𮭷𮭹𮮁𮮑𮮐𭔌𮮦𮮳𮮲𮮵𮮰𮮴𮮱𮮺𮮼𮮽𮯗𮧻𮯟𮯞𮯝𮯜𬺽𬻇𬻎𬻛𬻸𮮻𬽚𬽙𬽝𬽠𬽧𬽤𬽫𬽩𬽶𬽷𬽮𬾁𬾄𬾎𬾚𬾻𬾹𬿛𬿶𬿭𭀉𭀨𭁉𭁕𭁗𭎈𭁨𭁦𭁲𭁴𭁶𭁼𭂈𭂎𭂑𭂓𭂔𭂗𭂚𭂜𭂫𭂴𭂳𭃤𭃰𭃿𭄥𫦱𭄳𭅁𭅀𭅍𭅔𭅟𭅠𭅹𭅼𭆁𭆃𭆄𭆐𭆔𭆷𭇊𭇆𭇑𭇗𭇖𭈝𭉇𭉠𭉩𭊊𭉢𭊏𭊉𭋆𭍶𭌰𭍏𭍦𭎀𭍻𭎅𭎛𭎢𭎤𭎜𭎮𫮍𭏍𭏐𭏾𭐊𭐒𭐙𭐦𭐮𭐰𭐠𭐢𭐥𭐧𭑂𭑋𭑍𭑖𭑚𭑜𫯱𭑞𭑪𭑮𭑯𭒀𭒑𭒔𭒗𭒞𭒸𭒼𭒽𭓇𭓈𭓘𭓕𭓦𭓳𭓻𭔗𭔟𭔶𭔷𭕙𭕥𭕯𭖃𭖌𭖓𭖫𭖬𭖩𭗃𭗇𭗕𭗔𭗪𭗭𭗶𭘒𭘑𭘚𭘘𭘩𭘫𭙍𭙒𭙔𭙡𭙧𭙯𭙱𭙸𭙶𭚀𭚂𭙽𭚑𭚟𭚣𭚪𭚬𭚮𭚴𭚶𭚺𭚿𭛂𭛅𭛌𭛍𭛝𭛞𭛣𭛧𭛪𭛳𭜂𭜈𭜊𭜐𭜑𭜘𭜡𭜛𭜙𭜮𭜾𭝅𭜶𭝆𭝑𭝝𭝌𭝙𭝡𭝢𭞁𭝷𭝨𭐫𭞞𭞘𭞵𭞏𭞾𭟁𭟄𭟮𭟱𭟹𭡈𭡷𭡸𭢏𭢅𭢧𭢘𭢯𭣄𭤄𭤃𭤕𭤘𭤖𭤗𭤙𭤛𭤣𭤯𭥜𭥚𭥘𭥦𭥧𭥸𭦀𭦁𭦑𭦙𭦚𭦠𭦛𭦩𭦽𭧌𭧠𭧛𭧽𭧩𭧵𭨍𭨔𭦨𭨰𭨹𭩜𭩟𭩩𭩧𭩳𭪒𭪈𭪮𭪚𭪯𭪛𭪲𭪜𭪶𭫍𭫕𭫚𭫜𭪼𭫓𭫢𭫿𭫸𭫯𭫰𭬁𭬂𭬊𭬤𭬯𭬴𭤠𭭒𭭘𭭦𭭰𭮃𭮎𭮗𭮫𭮵𭮴𭯃𭯶𭰑𭰣𭰯𭰰𭰩𭰼𭱄𭱚𭱏𭰱𭱎𭱅𭱆𭱰𭱱𭱩𭱪𭱴𭱢𭱮𭲃𭲄𭲋𭱼𭲌𭲍𭱽𭲒𭲅𭱷𭲓𭲧𭲠𭲞𭲔𭳈𭲮𭲳𭳁𭳚𭲾𭳊𭳗𭳓𭳐𭳖𭳩𭳠𭳣𭳤𭳯𭴖𭴫𭴬𭴿𭴻𭴽𭵋𭵙𭶉𭵳𭵝𭵨𭶂𭵺𭵴𭶒𭶌𭷄𭷙𭷘𭸈𭸍𭸒𭸠𭸡𭸵𭸶𭸼𭹄𭹖𭹗𭹣𭹤𭹲𭹽𭹼𭹷𭺱𬎾𭻌𭻒𭻙𭻸𭼎𮍒𭼸𭼼𭽅𭽋𭽍𭽏𭽙𭽜𭽞𭽸𭽿𭾇𭾦𠤤𭿦𭿩𭿿𮀁𮀃𮀇𮀐𮀠𮀯𮀳𮀶𮀿𮁃𮁣𮁢𮁩𮁤𮁯𮁴𮁲𮁰𮁶𮁹𮂇𮂏𮂔𮂚𮂗𮂜𮂢𮂧𮂯𮂲𮂺𮃁𮂼𮃗𮃜𮃬𮃰𮃴𮄂𮄁𮄧𮄮𮄭𮄯𮄱𮄴𮄵𮄿𮅉𮅔𮅞𮅡𮅯𮅰𮆆𮅶𮆯𮆶𮆪𮇋𮇜𮇞𮇩𮇵𮈃𮈆𮈇𮈌𮈏𮈕𮈜𮈦𮈰𮉈𮉱𮉸𮊅𮊢𮊥𮊪𮊾𮋁𮋚𮋦𮋮𮋰𮋸𮋹𮌂𮌏𮌐𮓢𮌛𮌦𮌷𮌺𮍈𮍣𮍧𮍫𮍬𮍭𮍰𮎍𮎢𮎣𮎪𮎸𮎻𮏇𮏌𮏍𮏐𮏞𮏁𮏒𮏧𮏿𮏦𮏣𮏥𮏳𮐇𮐩𮐹𮐻𮑝𮑛𮑜𮑠𮒔𮑼𮒋𮒛𮒘𮒜𮓀𮓛𮓦𮓯𮓼𮓺𮓽𮔈𮔗𮔰𮕋𮕤𮕥𮖇𮖛𮖯𮖻𮗈𮗓𮗖𮗜𮗫𮗭𮗬𮗲𮗽𮘊𮘙𮘡𮘥𮘹𮘽𮙄𮙗𮙚𮙜𮙦𮙭𮚁𮚍𮚚𮚕𮚦𮚰𮚴𬦌𮛙𮛪𮛡𮜀𮜉𮜕𮜶𮝀𮝞𮝩𮝼𮞉𮞟𮞙𮞚𮞰𮞾𮟈𮟗𮟐𮟚𮟘𮟣𮟲𮟻𮠘𮠭𮠳𮡏𮡗𮡦𮡤𮡧𮡪𮡨𮡫𮡯𮡰𮡮𮡴𮡸𮡼𮡹𮢀𮢌𮢃𮢍𮢕𮢖𮢊𮢜𮢚𮢛𮢡𮢙𮢢𮢨𮢴𮢬𮢻𮢼𮢾𮢿𮣍𮣗𮣏𮣕𮣁𮣞𮣟𮤚𮤜𮤧𮤾𮥙𮥴𮥵𮥷𮥾𮦀𭬲𮦢𮦜𮧀𮧒𮧗𮧲𮨍𮨽𮨾𮩳𮩺𮪈𮪻𮫋𮫵𮫹𮬀𮬇𮬙𮬰𮬱𮬹𮭋𮭐𮭠𮮄𮮆𮮹𮮾𮯃𮯅𮯄𮯇𮯈𮯎𮯌𮯋𮯛𮯠𭓽𮂻𮇎𭆂𬼟𣦑𭂲𭓱𮩁𛀂𛀅𛀃𛀄𛀆𛀇𛀈𛀉𛀊𛀋𛀌𛀍𛀎𛀁𛀏𛀐𛀑𛀒𛀓𛀔𛀕𛀖𛀗𛀘𛀙𛀚𛀛𛀢𛀜𛀝𛀞𛀟𛀠𛀡𛀣𛀤𛀥𛀦𛀧𛀨𛀩𛀪𛀫𛀬𛀭𛀮𛀯𛀰𛀱𛀳𛀲𛀴𛀵𛀶𛀷𛀸𛀹𛀻𛀺𛀼𛀽𛀾𛀿𛁀𛁁𛁂𛁃𛁄𛁅𛁆𛁇𛁈𛁉𛁊𛁋𛁌𛁍𛁎𛁏𛁐𛁑𛁒𛁓𛁔𛁕𛁖𛁗𛁘𛁙𛁚𛁛𛁜𛁝𛁞𛁟𛁠𛁡𛁢𛁣𛁤𛁥𛁦𛁧𛁨𛁩𛁪𛁭𛁫𛁬𛁮𛁯𛁰𛁱𛁲𛁳𛁴𛁵𛁶𛁷𛁸𛁹𛁺𛁻𛁼𛁽𛁾𛁿𛂀𛂁𛂂𛂃𛂄𛂅𛂆𛂇𛂈𛂉𛂊𛂋𛂌𛂎𛂍𛂏𛂐𛂑𛂘𛂒𛂓𛂔𛂕𛂖𛂗𛂙𛂚𛂛𛂜𛂝𛂞𛂟𛂠𛂡𛂢𛂣𛂤𛂥𛂦𛂧𛂨𛂩𛂪𛂫𛂬𛂭𛂮𛂯𛂰𛂱𛂲𛂳𛂵𛂴𛂶𛂷𛂸𛂹𛂺𛂻𛂼𛂽𛂾𛂿𛃀𛃁𛃂𛃃𛃄𛃅𛃆𛃇𛃈𛃉𛃊𛃋𛃌𛃍𛃎𛃏𛃐𛃑𛃒𛃓𛃔𛃕𛃖𛃗𛃘𛃙𛃚𛃛𛃜𛃝𛃞𛃢𛃟𛃡𛃠𛃣𛃤𛃥𛃦𛃧𛃨𛃩𛃪𛃫𛃬𛃭𛃮𛃯𛃰𛃱𛃲𛃳𛃴𛃵𛃶𛃷𛃸𛃹𛃺𛃻𛃼𛃽𛃾𛃿𛄀𛄁𛄂𛄃𛄄𛄅𛄆𛄇𛄈𛄉𛄊𛄋𛄌𛄍𛄎𛄏𛄐𛄑𛄒𛄓𛄔𛄕𛄖𛄗𛄘𛄙𛄚𛄛𛄜𛄞𛄝𠀤𫵖𫠩𬐼𪼾𫥎𦣅𬀽𡩵𦉶𦛱𦵕𨐘𨜊𧈮

## 2018/03/10

修改或重修以下字元：
哌挀派眽脈蒎衇覛鎃霢㭛䖰䤨𠃄𢟿𤖼𥙎𥯠𥿯𦽤𧖴𧠨𧡒𧵬𩈛𩥜𪃻𪅚偰剨割喫嗐噄囓契害幰恝憲挈揳搳攇栔楔櫶洯湱潔瀗犗猰瘈瘛瞎砉碶磍禊稧窫絜緳縖葜藼蛪螛褉觢豁轄辖鍥鎋锲騞鶷齧㓗㓞㓶㗉㛃㝣㦥㪡㮫㮮㲅㸷㼤䂮䐼䒠䘆䚉䛚䛶䜢䝟䤿䥛䦬䧮䫔䱮𠂖𠎧𠛉𠜵𠟽𠢆𠲱𠹙𡁁𡊷𡐤𡟲𡫴𡬨𡮞𡿖𢍆𢖘𢝇𢞐𢞩𢴲𢻜𣐇𣚃𣣶𣭭𣳱𣸲𤊴𤟐𤟻𤠵𤸞𤸪𤺚𤼂𥊯𥎆𥰶𦄜𦎱𦚨𦝜𦢽𦤬𦧮𦩣𦳴𦵯𦺧𧑨𧒡𧓞𧜅𧩶𧯆𧳳𧻘𧼪𧽁𧾨𨀦𨂰𨏥𨜒𨜣𨴒𩍹𩏓𩝛𩡔𩥌𩪃𩮁𩮝𪀡𪃈𪅸𪇜𪙏習嶍慴摺槢漝熠磖翫褶謵霫飁騽鰼㗩㦻㿇䌌䐲䒁𠐢𣤊𣯥𣯮𤗨𤛊𤬥𥱵𦒆𦒣𦗗𦧱𦸚𦾬𧐔𨄌𨻸𨻿𩀦𪄶皆偕勓喈堦媘揩楷湝煯瑎稭蒈蝔諧谐鍇锴階鶛龤㾬䃈䡡𡺓𢔡𢾆𤭧𥍾𥏪𥚺𥻄𦂄𦎥𦝨𦞉𧳧𩀊𩋧𩘅𩘗𩤠𩩰嵆嵇稽諬鑙㛷䅩䅓𥡞𥡳𥡴𥢑𥢔嚼灂爝爵皭穱釂㩱㬭䂃𠘣𢥚𥣓𥴺𧛏𩉋𩝐𬝘𬵱㢓䀍䤗𡈠𡔕𢕔𢷢𤍤𥎟𥕞𥪮𥫖𥸡𧆐𧗜𧫱𧹉𧽣𨙏𩅈𩌬𪅂䂌䃥䆹䚒䝑䡴䭚䮵䴀𠟍𡦜𡰕𢖜𢣛𢤤𢨒𣦟𥫂𥫎𥳘𥷈𦌜𦏆𦒍𦔛𧑆𧝎𧬤𧽿𨝯𩍅𩕉𩦍𩪘𫝿謱𠞭𧃒𧔅洖祦脵㵄𢫸𣑀𦨼𩶭𪃇𫚾𬗙乑潀潨眾聚藂衆鄹驟骤㔌㵵䝒䝦䠫𠍸𠏭𡒍𢷗𣀒𣽍𤄓𥣙𥵫𥼟𦆜𧑄𧑸𧓏𧕠𧭍𨖼𨞮𨬹𨴖𨽁𩂢𩅉𩍧𩼦𪢊佴偮傇咠咡嗫媶弭挕揖摂摄斊栮楫榵洱渳湒滠珥眲穁箿緝縙缉茸葞葺衈誀諿讘躡輯辑鉺鍓铒顳餌饵駬髶㛅㣬㥝㸎䁒䇯䉗䋙䌰䎹䏪䐕䐛䔱䝕䠜䣵䤊䩰䩸䯀𠶻𠻎𠻕𠻠𠿠𡂩𡃃𡄔𡍲𡎎𡓳𡠸𡤙𡦍𡱡𢕃𢜱𢝉𢡐𢱕𣀳𣌍𣠞𣧹𣩚𤛄𥍉𥎂𥕁𥠋𥷨𥹢𥻯𥽳𦔋𦔯𦔰𦕉𦕓𦕕𦕴𦕺𦖜𦖝𦖥𦖨𦖽𦗊𦗕𦗙𦗤𦗥𦗦𦗶𦗷𦗼𦗾𦗿𦘃𦘉𦶪𧊗𧎣𧙫𧤏𧪇𨉴𨊞𨍷𨨹𨺿𨻕𩊐𩮙𩯻𩲽𪓯𪔪𪕔𫃇𫉠𫉻𬄻𬝞𬵺𬸽𩂻刹弑寳弥覙㳽䟢𠰚𠵸𣆋𣧢𤵜𥮜𥿜𦕗𦙳𦬼𧧂𧵉𩚸𩜖𩬘𬝍𠧏僶憴澠竈鼇䵷𣤶𥀨𥀩𨭘𪔁龞䶯䶰䶱𩙠𪚬𪚭𪚮𪚯𪚰𪚱𪚳𪚵𪚶𪚸𪚹𪚻𪚼𪚽𪛀𪛁𪛂𪛈𪛕𪛖𢥱𤓗𧅝𧖤𧟔𨤇𨤈䢈䭝䯤䵳䶐𠑱𡑭𡼾𢶒𣋘𣍐𣫪𥢶𦔦𧴚𨗥𨞡𨭗𩆁䲋𠟆𢡚𦅦𦏋𨅕𩁀𩞲𪍲𪖽㦔㩎㱘𡽣𢅠𣎩𣚕𣝓𤳪𥀬𥌅𥣘𧗖𧞣𨽀𩉂𩉇𩼴𪒞㜖㡟㯾㷮䄚䏆䐬䜊𡮦𢲵𣉿𣍖𣩒𤡐𥀛𥲍𦋿𦿩𧕐𩘳𩞄䅲𡺸𣯆𣹡𥉙𦓂𦔌𦞯𧡺𧪡𨢍𨪌𩥂𩥞𡅿𡤲𣡣𤅦𤓠𥍗𥜸𥸖𥾁𧅸𧖋𨟬𨤌𨰳𩧤𩽶𡘍𡱌𡷆𪻘𠋧𥅨𥥣𠷐𡺟𤟿𥹚𦍼𬝖𦵕䚙𣕲𧱂𧻚𨕹𣉖𣘇𤌓𦋠𩎨𩒢𧡢𧤎䱎𩀈𪊥𩋢𩏆𩘒𩤡䳦𪃗𩫧𩍻𡩦𡪏堩揯緪㮓䱭𡩃𢫮𢰨𣈶𣎄𥔂𦚹𧙸𫰟𬣄𬮑𠣰𠾏𡄢𡣈𡦡𡪄𡺐𡼞𢄳𢅔𢉜𢋂𢐼𢑳𢔪𢝬𢥃𢷷𢾀𣃈𣃑𣋐𣦈𣦡𤏸𤑨𤣘𤯈𤺈𤻃𥀁𥖛𥗁𥳉𥵟𦅁𦅷𦇃𦋧𦑥𦓍𦘠𦠏𦡄𦺥𦿀𧄔𧤺𧬅𧳯𧷿𨅓𨟞𨣍𨮿𨲘𨶶𨷄𨼑𩋵𩜼𩤜𩫭𩱰𩴀𩴟𩼁𪃙𪋏𪋑𪋰𪹶㐯㗍䅨䦭䫝䭯䭰䭱䭲䭳𠝲𢢹𤋭𤧘𤼍𥔡𥗶𧮠𧽂𩠻𩠽𩠾𩠿𩡀𩡃𩡄𩡅𩡈𩡊𩡌𩡎𩡐𩡑𩡒𩡓𩡔𩡕𩡘𩡚𩡝𩡠𩡡𩡢𩡤𩡥𩤹㛥㧺㭼㹺䂿䈋䍝䎓䓠䵬䶁𠄄𠉤𠴲𡌩𢃕𣥾𤿽𦑇𦧟𦧥𧌏𨌭𨓬𨡍𩎽𩣯𩭣𪂌㞓㞛㮷㴯㸟䭫䭬𠩊𣿉𥡞𥿻𦓀𦦃𦮂𧊙𨌁𩊝𩠜𩬺𪗷㫀䅛䗉䮖𢃑𣉑𣋎𣮑𥛼𥜩𥫅𨍆𪂇𪉨𪛋𣸄𡪴𢳔𣩐𤛝𥀝𧃴𧐴𨟨𨢲𨣡𩐼𩘰𫫠㿢䳟𡦀𡪙𢡗𢡰𢢤𣇴𣇵𣊧𣋐𤀄𥎒𦁠𧖽𧡜𨞚𨵛𩣶𪂡𫀹㶘𡼒𢅀𢕯𤁡𤂹𤑶𥢏𥨎𦗡𧝓𧰘𧽼𨝸𩀽𩡝𪍵𡡖𣩳𥎑𥸢𧖛𧝆𨅔𨼐𩀿𩅨𩻛𪅽𪖼㓭㔠㡫㬞㵣㵧㷎㹇䅥䈓䋵䔽䔾䕣䗶䥟䦪䨠䫘𠂄𠥜𠾩𠿒𡇼𡽙𢆜𢇋𢉥𢎔𢢖𢢚𢶆𢷒𣂰𣎅𣨵𣰌𣿌𤢔𤩲𤸎𤺐𥀥𥈎𥢸𥴭𥻉𦅶𦝲𦤦𦩥𦪬𦼰𦼵𦿋𧇷𧝶𧝽𧼨𨆍𨉪𨞛𨭛𨲲𩍛𩦏𩦞𩩲𩮂𩯝𩹄𪆰𪑦𪓮𪕭𪘹𪙰喝褐謁䅧䜾䤃䪦䪧䪨䪩䪪䪫䪬䪭䪮䪯䪰䬓𠗥𠮒𠽪𠿌𡅙𡑠𡪟𢉩𢋆𢴠𢾑𣤗𣤣𣽚𤃷𤋾𤟟𤪅𦋫𦺼𦺿𧄕𧗹𧝊𧫙𧬣𧮍𧯹𨍑𨙣𩇄𩈴𩐘𩐙𩐛𩐜𩐞𩐡𩐣𩐤𩐥𩐦𩐨𩐫𩐭𩐮𩐰𩐱𩐲𩐴𩐵𩐶𩐷𩐸𩐹𩐺𩐻𩐼𩐾𩑁𩑂𩑃𩑇𩑈𩑉𩑊𩪢𩪣𩯈𩹎𪔧𪛏響䖁䗷𩁈𫔪𩺿䔔𥸜𧫙㫯㘛䆍䌬䡁䪊䮾𠑙𡃡𡾩𢤱𢤲𤮨𤼃𥸉𦌼𦒮𦪽𦪿𧟟𧮩𨇘𨏠𨳁𨳅𩙘𩟭𩰀𪈗𪎁𪐖𪔷𪚑𪚒𪚓𪚗𪚘𪚝𪚟𥸊𦗐𧅙𧱘𧱳𤹟𧛨𧜟𨝗𩝾𩱐𪄲㒀㰅㹍䁤䊞䎮䐱䙗䮰䵂𠢗𡂓𡒱𢤊𢸈𣂉𣯵𤁷𤑦𤠻𤢼𤹞𥕐𥖾𥛚𥡦𥧮𦗑𧃐𧏸𧽦𨮹𩍷𩝿𪄱𪐏𡙶𧯇𨻫𪱨𣬙㥬㿶䄘䅭䒍䠙䧛䨦䩷𠗵𡽲𢄎𢐊𣂆𣯊𣯟𤧭𥻭𦗍𦾭𧤞𨍩𨏰𨢐𩡕𠘅𤢌𥼝𦔟𦡬𪒭㛳㡣䫕䱱𠽜𡄶𡡿𡦔𢅛𢴨𣚌𣾪𤚢𤟾𤾤𦔝𧀰𧂨𧍝𧝐𧤍𧬍𨅙𨗁𨬙𩋣𩤢𩪙𪆡𪍼𪕬𪖰㜪䞋𡩁𥗒𥨾𧃫𧅜𧭼𨑁𫚀㔎㔑㖖㛙㜸㠔㦚㱰㱸㲔㵨㵷㸉㸤㾕䁹䅸䉸䏁䐻䔂䛨䢃䢄䮨𠒱𠞂𠪮𠮃𠽿𡁂𡁈𡅼𡎰𡟭𡤏𡦣𡺰𡽁𡽕𡾦𡾲𢐦𢓫𢔭𢕾𢡇𢣑𢩞𢶓𢹐𣃎𣖸𣘘𣘲𣙼𣦢𣩩𣪮𣫖𣫚𣸒𣹲𣿒𤀫𤀲𤌊𤏻𤏽𤐮𤒞𤗺𤙡𤢣𤨘𤴣𤻁𥃌𥌊𥏔𥔈𥗲𥢍𥣦𥴬𥶜𥷁𥻮𥼺𦀓𦃘𦆣𦌠𦍁𦐹𦘄𦞤𦠋𦠬𦡜𦸯𦽆𦽵𧀕𧀼𧃎𧄘𧆈𧎨𧒣𧕏𧗶𧛺𧤱𧪹𧬕𧭋𧱏𧲉𧲜𧾑𨁅𨃛𨆳𨇨𨌍𨐍𨐏𨐑𨐕𨐖𨐘𨐛𨐜𨐝𨐞𨐟𨐠𨐡𨐢𨐣𨐥𨐦𨐨𨐩𨐯𨐰𨐱𨐳𨐴𨐵𨐶𨐹𨐼𨐾𨑀𨑂𨫽𨬟𩁊𩕺𩝪𩪧𩷔𩺵𩼎𪇊𪇷𪎃𪮷𪿢㢺䈉𠙤𡁕𡞘𣮍𤗈𤮌𥇒𥪵𥵳𦁉𦽚𧌃𧚪𧩕𧱙𧳛𪑗𥫐㚊䀭䠹䤤䬵𠛳𡀲𡭹𡱍𡲼𢻉𢼵𤸺𥩲𦈲𦐤𦷷𧊏𨀖𨒨𩐰𩠚𩰶郞閬㓪㝗㟍㢃㫰㱢㾗䀶䆡䍚䕞䡙䯖𠻡𢕦𢳑𢽂𣂞𣻡𤗀𤭒𥍫𥶞𦫍𦵧𦺫𦿉𧚅𧻴𩗖𩛡𩷕𪁜廊朗㾿䱶𤠸𨉰𩝢𠽣𡍪𢔣𢩖𢻗𤊿𥀈𥈊𥓾𥪵𥯥𦂉𦑣𦑪𦝥𦦈𦦕𦦘𧶵𧼰𨂵𨇧𨔨𩃹𩝟𪘾㮇𥪌𢞋𩷵𠷕𣽝𥢓𥷜𧍯𨅏𨐦𨺢𩖙𩖚𩖛𩖜𩖝𩖠𩖡𩖢𩖣𩖤𩖥𩖦𩖨𩖩𩖬𩖭𩖮𩖯𩖰𩖲𩖳𩖴𩖵𩖶𩖷𩖸𩖹𩖺𩖼𩖽𩖾𩖿𩗁𩗄𩗅𩗆𩗇𩗈𩗉𩗊𩗋𩗎𩗏𩗐𩗓𩗔𩗕𩗖𩗘𩗙𩗚𩗛𩗝𩗞𩗠𩗢𩗣𩗤𩗥𩗧𩗨𩗩𩗪𩗫𩗬𩗭𩗮𩗯𩗰𩗱𩗲𩗳𩗴𩗵𩗶𩗷𩗸𩗼𩗽𩗾𩗿𩘁𩘃𩘅𩘆𩘇𩘈𩘉𩘊𩘋𩘌𩘍𩘎𩘏𩘐𩘑𩘒𩘓𩘕𩘖𩘗𩘘𩘙𩘚𩘜𩘝𩘞𩘟𩘠𩘡𩘥𩘦𩘧𩘭𩘮𩘯𩘰𩘱𩘲𩘳𩘵𩘷𩘸𩘹𩘺𩘻𩘼𩘽𩘾𩘿𩙁𩙂𩙃𩙄𩙅𩙆𩙇𩙈𩙊𩙎𩙏𩙐𩙑𩙒𩙓𩙔𩙖𩙘𩙙𩙚𩙛𩙜𩙝𩙞𩙠𩙡𩙢𩙣𩙤𩹥𪋖𪕴𫗆𫙹𬬣𬱴𡞟𡯘𨩵𡜟𤇲𦚮𦣨𧙨𨉃𨿂𨿃𪀼𩄸𡔞𢇦𢗖𡔟𡔨𫊟𧠒𦜙𤏼䏦䑙䑚䑛䑜𡇜𢠾𥵶𥶕𦧈𦧉𦧊𦧋𦧎𦧏𦧐𦧒𦧓𦧕𦧖𦧘𦧙𦧚𦧛𦧝𦧟𦧢𦧤𦧥𦧧𦧩𦧪𦧫𦧭𦧮𦧰𦧱𦧴𦧹𦧼𦳇𧮥𪌩𪎾𪙬𪙶𨜮𨜊𠎱𢑋𩱠𡰡𢥘𤣑𤮰𤼒𥍋𦢿𧟃𧢧𧲚𨏳𩽨𪈥𪋸媸滍㺈䧝𡴍𡴒𢾫𣣷𥉍𦞲𧘫𧪴𢹘犕糒㣁㷶㸢𢞎𣖾𤏛𤖐𠪹𣞑𢐺𣣮𨙡𨜚𨜲𨺪䯵𢍃𢞨𢡘𣮡𣽑𦯨𨁼𨐟𩣺𩿜𪑖㱵䴅䥀𠋷𢱟𩝚𤚍桺駵䱖𠋿𠓴𠞐𡋲𡘣𡟽𢥍𢲖𣨇𤄉𤥗𤮷𥁶𥥹𥷢𦊿𦕼𦯄𧶝𨌡𨦰𩮢𪕚𢊱𢴢𢿠𣯻𤖘𤗸𥢊𥳡𧴍𩀴𥌶𥽿𠔒𠲼𤡡𤦥𥌶𥧹𥨗𦒟𦽭㓖㪤𢳂𤹝𧏻缡㰚㷰䄜䅻䍦䙰䬜𠌯𪱩㥥㬂㷒㒖䊪𦂕𡽇𦽳𨭬𡿋䴁䘍𫛙㙑㝢𥝀䄔𤘐䨞龋𢖎𢳍𣘝𣻝𥱺𦸊𨝍𪄷𠙞𥾀𧍔𧷋𩀄𢉬𧛑𧝪𧞙𧟯𪃋𥋣㷡䋌䝣䢹䣰𢆢𤦲𥑭䐰䗛𠌪𡟞𡤥𡩢𢞣𥠿𦤜𦺰𤤸𥬲𦀉𨹄𩊜𩎫𠖊𠚹𠣿𠥚𠥝𠨻𠩻𠪘𠫌𠲴𠶳𠷑𠹢𠿉𠿊𠿍𡁒𡂑𡃫𡄇𡄈𡄒𡄔𡄵𡇀𡍰𡎷𡒂𡒼𡓊𡚾𡢕𡢖𡤖𡧔𡷠𢄌𢅝𢊘𢋁𢑿𢗎𢞒𢟝𢠺𢢞𢢢𢯫𢯸𢶙𣉜𣍆𣒃𣓒𣖫𣝝𣤢𣪂𣪃𣪄𣪅𣪆𣪇𣪉𣪊𣪋𣪌𣪍𣪏𣪐𣪖𣪗𣪙𣪚𣪛𣪠𣪡𣪣𣪩𣪪𣪭𣪮𣪯𣪰𣪲𣪳𣪴𣪶𣪷𣪸𣪹𣪼𣪽𣪾𣫀𣫁𣫉𣫊𣫌𣫐𣫒𣫓𣫖𣫘𣫙𣫚𣫜𣫝𣫞𣫟𣫡𣫣𣫤𣫥𣫦𣫧𣫨𣫩𣫪𣫫𣸍𣹬𣺲𣻑𣾮𤈧𤍁𤖬𤚲𤚼𤛖𤛗𤝈𤠍𤡘𤥞𤧧𤩮𤩯𤩱𤩴𤪢𤮈𤮛𤶣𤹥𤻷𤼺𥀎𥃟𥆛𥈼𥉟𥊧𥍟𥔳𥖳𥝻𥦆𥰺𥲏𥳊𥳨𥳴𥴫𥵓𥵠𥶵𥷆𥷝𥷽𥸂𥸃𥸋𥺵𥻦𥼆𥼹𥽂𥽦𥽿𦃏𦋲𦎯𦎼𦒇𦒫𦤂𦦹𦪑𦪹𦳠𦴎𦺔𦼷𦽄𦽐𦽛𦽮𦾫𦿓𧂔𧂣𧄘𧈌𧈑𧈖𧈗𧈻𧏌𧏚𧏫𧐜𧒼𧓙𧘣𧜁𧜤𧝷𧞒𧞹𧞺𧢂𧤔𧤧𧫦𧫫𧬋𧮒𧮙𧯸𧰵𧱕𧲇𧷥𧹲𧹷𧺢𨂩𨃞𨃟𨍪𨖏𨗋𨙀𨡩𨢋𨦯𨨻𨩷𨱚𨵐𨶞𨷕𨸜𨺣𨿒𩀠𩁡𩂹𩋐𩋦𩌊𩍤𩏇𩏻𩤣𩥯𩪔𩪡𩮫𩮵𩯌𩳇𩴇𩵤𩷍𩸿𩹨𪁛𪄀𪄅𪆪𪇂𪇗𪉘𪌓𪍠𪍥𪎇𪏙𪐕𪐮𪒀𪒋𪒮𪔰𪕂𪕷𪕸𪖃𪖆𪛒𪝒𪡹𪼪𫖋𫞌𫟁𫨻𬆍𬆲㐗㧯䇭䎜𡪰𡶰𤶁𥥧𥨔𦒲𦒺𦒾𦓀𦓂𦓄𦓈𦓋𨈺𨊁𨘝𨚻𨠬𨴛𩅯𩇇𩥞𩺆𫦶㜈𡺱𣖶𩥎㡬䫆𡓖𤻯𥓉𩫨𣡥𥎥𣚉𣼢𠊊𩚁𦦹𣫩㒨𨇫𠟼闾𪺲𣃠𣃢甹𣄧梟𡳴𤰑𩡑𩡥𣊦𨑁𨐞𩖜𪥣𦃁𢟿𦧖𡸁𡼻𣠹

## 2017/07/07

字型主製作人改由李爾樅擔任，內木一郎、陳輝恒任聯合製作人。

## 2017/06/26

修改或重修以下字元：
戏𡕨𦞶𧔫䯬𡓣𡾘𨟍𩫠𩫧𩫨𩫩𩫫𩫭𩫯𩫰𩫱𪈃

## 2017/06/24

修改或重修以下字元：
𠣥𡻑𢁁𢒔𢧈𢽚𣂡𣹞𥳤𧞮𧰵𧼙𨁿𨧧𩳥𪳓

## 2017/06/23

修改或重修以下字元：
豖冢剢啄塚椓涿琢瘃硺諑诼㙇㞘㧻䐁䦠

## 2017/06/19

新增以下字元：
𫠠𫡑𬺰𭁟𭕄

## 2017/06/17

修改或重修以下字元：
𠔁𠔀

## 2017/06/15

新增以下字元：
𠩵𥫗𫩏𫠣

## 2017/06/12

修改或重修以下字元：
丛东丝

## 2017/06/10

修改筆畫區域字元。

## 2017/06/06

修改或重修以下字元：
⺄⽠⽡⾇⾮⾹

## 2017/06/05

修改或重修以下字元：
還薳園薗

## 2017/06/04

修改或重修以下字元：
華驊䅿崋

## 2017/06/03

修改或重修以下字元：
垂倕厜唾埵娷崜捶棰涶甀睡硾箠綞缍腄菙諈郵錘锤陲㩾㻔䅜䍋䮔䳠

## 2017/05/28

修改或重修以下字元：
糞瀵䆏𡓴𢹔

## 2017/05/27

修改或重修以下字元：
異廙潩熼禩穓趩龭𠥦𠪙𢎑𢨇𢨚𢨞𣚣𤲲𤳓𤺆𤼌𥛴𥤌𦒖𦔜𦔫𦾲𧃞𧃟𧃢𧇽𧑌𧾰𨅜𨙒𨯼𨾂𩙺𩞫𩦸𩴜𪒕𬢄𬵫𬵷

## 2017/05/24

修改或重修以下字元：
𠎧𠜵𠹙𡊷𡐤𡬨𡿖𢍆𢴲𣚃𣭭𣳱𣸲𤟐𤟻𤠵𤸞𤸪𤺚𥊯𦄜𦚨𦝜𦩣𦳴𧑨𧩶𧳳𧻘𧼪𧽁𨀦𨂰𨜒𨜣𨴒𩮁𪀡𪃈𪅸

## 2017/05/23

修改或重修以下字元：
揳锲㓗㓶㗉㛃㝣㮮㸷㼤䂮䐼䚉䛚䝟䤿䥛䦬䫔䱮

## 2017/05/22

修改或重修以下字元：
𢝇𤊴

## 2017/05/15

修改或重修以下字元：
𧊯𩥔

## 2017/05/09

修改或重修以下字元：
残浅践𥁫戋

## 2017/05/08

修改或重修以下字元：
栈溅盏笺线贱钱饯纪

## 2017/05/06

修改或重修以下字元：
𠃄𢟿𤖼𥙎𥯠𥿯𦽤𧖴𧠨𧡒𧵬𩈛𩥜𪃻𪅚

## 2017/05/05

修改或重修以下字元：
哌挀派眽脈蒎衇覛鎃霢㭛䖰䤨

## 2017/05/01

修改或重修以下字元：
㣅㻸㿊䁮䃡䅾䍼䐶䣟䤐䫬

## 2017/04/27

修改或重修以下字元：
𥀯𥣫𥽘𨣱𩁝𪇴

## 2017/04/25

內部釋出「I.明體」字型檔：I.Ming-5.01.otf，版本資訊爲Version 5.01。

## 2017/04/23

修改或重修以下字元：
㭄讯伦抡沦纶论轮给创

## 2017/04/21

修改或重修以下字元：
㛃𪁋𠗝𣓆𤷏𥓕𥮍𦁍𨓮𨺄

## 2017/04/19

修改或重修以下字元：
佤旊珁瓦瓫瓮瓯瓷瓽甃甆甇甍甏甕甖砙缻薽邷齀㼗㼘㼙㼚㼛㼜㼝㼞㼠㼡㼢㼣㼤㼥㼦㼧㼨㼩㼪㼫㼬㼮㼯㼰㼲㼳㼴㼵㼷㼸㼹㼺㼻㼼㼽㼾㼿㽀㽂㽃㽆㽇㽉㽊㽋㽍䰛

## 2017/04/16

修改或重修以下字元：
𢎘㽕𠮤𡴰𢎙𣎺𤜛𩎩⺄𡕒𡗗𠂈㡭𡆧𪓔𦥯亼亽曓壄壳絯蔻簆蓰澸䃭䉞𦽫䜗䫲𩞿𨣝𤖛𥎅𦵺𦾽𧤩𧪟𨙎𩌐𣝋𥉀𥊽䜚𥊊𥊼𥆉䁹㱸䌟䑀䡶𦧇𦧻𩑀弡棭䘸䤳搲溛猋㿣𦰶𨐔𠝞𥀈𨜷

## 2017/04/15

修改或重修以下字元：
㥛䓧䩯𠔠𡹪𢉗𢔔𣷉𤊅𤷉𤺷𥈂𦎢𦽯𧛘𧩦𩏊㛮䤇𨡻䬒䮟𠝠𣮯𥈃𥋜𥔉𦖪𦺋𦺌𧼭𨜛𩮃𪂸

## 2017/04/14

修改或重修以下字元：
朼𢖬融曧㬏䮥虓䧱𠨍㔿𠨔卿眾𠍸潀潨䝦𥼟𧑄𨬹𠙹𠚋𢍁𤲣𢆟𤱤𧈕

新增以下字元：
𤱁

## 2017/04/13

新增以下字元：
丆丷乛亇龰龵龶龷龸龺龻立卵𧘇𠀆𠀎𠃊𠃌𠃍𠃎𠄐𠀎𠁣𠃛𠃜𡲢𥲃𦣞𨳈𪚴𪜊𫡏𬟏

## 2016/11/18

內木一郎公開發佈「I.明體」字型檔：I.Ming-5.00.otf，版本資訊爲Version 5.00。

內木一郎公開發佈「I.明體標點置中」字型檔：I.MingCP-5.00.otf，版本資訊爲Version 5.00。

## 2016/11/17

內木一郎從「I.Ming」分化出「I.MingCP」，稱呼爲「I.明體標點置中」（一點明體·標點置中），字型檔更名作：I.MingCP-4.91.otf，版本資訊爲Version 4.91。此字型檔案修改了以下標點符號，使它在橫排與直排裏都保持置中：
、︑。︒，︐：︓；︔

## 2016/11/16

依據回饋，修改或重修以下字元：
配𤖫𦐧

## 2016/11/08

釋出測試版「I.明體」字型檔：I.Ming-4.91.otf，版本資訊爲Version 4.91。檔案只給予協助者，以提供回饋。基本上主要處理CJK一般區域及Ext-A區域字元的字形修改。Ext-B及之後的區域，除獨用部件和個別較多見的用字元，或《傳承字形部件檢校表》中提及的例子外，目前暫不處理。

## 2016/11/07

修改或重修以下字元：
允充兊兖吮恱抁毤沇狁玧珫統统茺萒鈗銃铳阭馻㣞㤝㧤㭇㳘㽙䆓䘪䦾

## 2016/11/06

修改或重修以下字元：
蔑篾幾奧㤜㳚𠲌𣆒𤞉𥝨𠎶膥𣚺孂簋

## 2016/11/05

修改或重修以下字元：
饣⻠饥饧饨饩饪饫饬饭饮饯饰饱饲饴饵饶饷饺饼饽饿馀馁馄馅馆馇馈馊馋馍馏馐馑馒馓馔馕鸠鸡搀谗。

## 2016/11/04

修改或重修以下字元：
页⻚顶顷顸项顺须顼顽顾顿颀颁颂颃预颅领颇颈颉颊颌颍颏颐频颓颔颖颗题颚颛颜额颞颟颠颡颢颤颥颦颧。

## 2016/11/03

修改或重修以下字元：
贲贳贴贵贶贷贸费贺贻贼贽贾贿赀赁赂赃资赅赆赇赈赉赊赋赌赍赎赏赐赓赔赕赖赘赙赚赛赜赝赞赠赡赢赣。

## 2016/11/02

修改或重修以下字元：
㭸卫赵𡦱见⻅观规觅视觇览觉觊觋觌觎觏觐觑贝⻉贞负贡财责贤败账货质贩贪贫贬购贮贯贰贱。

## 2016/11/01

修改或重修以下字元：
鱤旃浵㥖㳩斲𠍄㐁巷港闀𩰓⼋⽎⽱⽿⾿⻱⿔禸龜㈪㈳㈶㈷㈸㈺㈻㈾㊊㊓㊖㊗㊘㊙㊜㊢㊩㊫㊮㊰㍻㍾条𠂞𠰗𧦻𠀒𠀩𤙀𦭃𧆪嵧廇磂籕蒥䗜䝀䶉𢕍𢞓𢞭𢣠𣠚𥀓𥏵𥛅𥠷𥰣𥳩𦃓𦉉𦞧𧤝𧽖𨍸𩥖籀鶹畱橊澑璢癅籒羀鐂飅驑㙧㩅𢊺𤮷𥛽𥢋𥨌𥶅𨖻𩅸𩞷𪅳㿪䏘𫘇𣬮㢶𢐈𢐤𠆢䴟嘧。

## 2016/10/28

修改或重修以下字元：
聴廰戢濈艥𥊬𥖙耳咠咡囁弭懾囁揖攝斊楫榵欇渳湒灄眲箃箿緝耳耷耸聋聑聟聠聡聪聱聲聳聶聻聾茸葺衈襵誀諿讘蹑躡輯鉺鍓鑷镊霵顳颞餌饵駬髶瑇蝳𤚚𨂭𨍛𩹝𡴛𢮇。

## 2016/10/24

修改或重修以下字元：
受授涭綬绶辤閿阌㖟㥅䛵𠃶𠢛𢔏𣄁𤟗𦧦𦰹𧌅𧚯𧡓𨛶愛僾噯嬡懓曖燰璦皧瞹薆鑀靉鱫舜僢橓瞬蕣䑟䢬䴄𤯷𦨁𬧓。

## 2016/10/21

修改或重修以下字元：
𪓔𬟏鬮龝䆋𪚰𪛁蘒赹𡼼𢴿𦺓。

## 2016/10/20

內木一郎把字型顯示名字更改作「I.Ming」，稱呼維持「I.明體」（一點明體），字型檔更名作：I.Ming.ttf，版本資訊爲Version 4.90。

同時，內木一郎另行分化出收錄異體字形的字型「I.MingVar」，其沿革請參看I.MingVar_history.md。

修改或重修以下字元：
𡬠皀㿝县叀医兓朁僭潛簪蠶譖鐕䭙嶜憯撍橬熸噆糣㔆鬵灊㕣柗沿船鉛袞滾蔉㙥㨰䙛䜇𠞬𡻨𢟦𧸫𨎊磙齔㫃𣃘卩𧰨𠯑桰銽㚔𣍝忞忟悋抆嗲。

## 2016/10/19

新增以下字元：
韨㖵礡粩𣪠𨊥𢚩𠬶𢿱𢽳麶躗𠘧𩑫𩥆𠊓𬙙𡎋𣆪𡭔𠾍𣙆𠃨。

## 2016/10/18

新增以下字元：
⿰⿱⿲⿳⿴⿵⿶⿷⿸⿹⿺⿻

## 2016/10/17

新增以下字元：
㇀㇁㇂㇃㇄㇅㇆㇇㇈㇉㇊㇋㇌㇍㇎㇏㇐㇑㇒㇓㇔㇕㇖㇗㇘㇙㇚㇛㇜㇝㇞㇟㇠㇡㇢㇣𠚤𠂊。

## 2016/10/16

修改或重修以下字元：
𦧡絬𥅝𧵭㒿匃笂䏎𩫏㔶郒樃烀寻浔荨鲟𣁝𣘦𢱲𪾲𫁈乂県揅。

## 2016/10/15

修改或重修以下字元：
𩰪鬱鬰𥠴𩰤优尨啈婞涬緈㓑䁄䂔䛭𢔛﨨卖买头。

## 2016/10/14

修改或重修以下字元：
夓夒夔巎巙犪獿虁躨㹛𠑍𢆃𢥝𢹎𢺕𤫕𧅄𨈉。

## 2016/10/13

修改或重修以下字元：
㬅澷㡢𠿐𡑦𡢚𢢔𢶔𤢞𥀤𦆅𦔨𦽦𧂧𧬒𨭜𩍗𩦧𩻠。

## 2016/10/12

修改或重修以下字元：
旅𡜅㭚䮉玈祣膂膐㢳𣖺𥰠𪑄𪒓𠂢哌挀派眽脈蒎衇覛鎃霢㭛䖰䤨。

## 2016/10/11

修改或重修以下字元：
𪉤咠嘜綌𢂲𠊬𠶸𢔱𢜭𤷽𧍕塄愣楞圐㗄覇覆覈価𦜳㬵𣍷枒𤡲𥳐䂗𦘪䭗䭙𩚗銏狦𠘀𨏩枣乂㐅乄亣又叉。

## 2016/10/10

修改以下字元：
〇。

新增以下字元：
ㄅㄆㄇㄈㄉㄊㄋㄌㄍㄎㄏㄐㄑㄒㄓㄔㄕㄖㄗㄘㄙㄚㄛㄜㄝㄞㄟㄠㄡㄢㄣㄤㄥㄦㄧㄨㄩㄪㄫㄬㄭㆠㆡㆢㆣㆤㆥㆦㆧㆨㆩㆪㆫㆬㆭㆮㆯㆰㆱㆲㆳㆴㆵㆶㆷㆸㆹㆺˉˊˋˍˎˏ〡〢〣〤〥〦〧〨〩〸〹〺。

## 2016/10/09

修改或重修以下字元：
巂儶孈攜欈瓗纗蠵觿讗酅鑴驨㔒㽯䪎䭨𡄴蚩𡉚㞷埏挻唌狿娫梴脠烻硟蜒綖鋋駳鯅郔。

## 2016/10/08

修改或重修以下字元：
鵇誤䲕咓渇又叉哽峺綆稉茰淑溆硻徤楗佼皎餃恔晈礮駮汶。

## 2016/10/07

修改或重修以下字元：
兓朁僭潛簪蠶譖偺喒揝昝糌䖜𣊛匫㳷𣓗䐇𣊸𣍘𠑤𡅰𣡘𤅍𥽾𨙠𨗐𤎷。

## 2016/10/06

修改或重修以下字元：
畢嗶彃滭熚篳縪罼蓽襅蹕鏎鞸韠饆驆魓鷝𣐽𣓀𠱫𠲗㖕𦛛。

## 2016/10/05

修改或重修以下字元：
𠄞𠄟𠄠二𠬛栬叧𤰇𣪘簋孂𡬠硑皏幈戍荗夊稄葰𫠥㔷𤵿𦭯𧒡𪆲缾𦦯𣏂杀㿝𨵠𥇵。

## 2016/10/04

修改或重修以下字元：
䊤䐺䚓䨵㫗厚𠷋𣖔𪉲𥜯𨟣䚐䠦𧒊𨼓𥏼𣉻𤁰𤂥𢅺𢆅𣍚𣍜𤾭𦧶𦶕𧺅𨃲𠪋。

## 2016/10/03

修改或重修以下字元：
覃嘾墰憛撢曋橝潭燂瞫磹禫簟罈蕈藫蟫譚谭贉醰鐔镡驔鱏鷣㜤㶘㽑。

## 2016/10/02

修改或重修以下字元：
𥓒𥣟𥦶𥶿𦜿𦢨𦥵𦥿𦻁𧂄𧚧𧯰𨇝𩉉𩓟𩭥𪉦。

## 2016/07/01

修改或重修以下字元：
㡊㶄㿕䌪䐄䘓䱤䶟𠕣𠜼𠻍𡣽𡸞𢴼𢸴𢽣𣛱𣽌𤎡𤏭𤟅𤯐𤿷𥇌。

## 2016/06/29

修改或重修以下字元：
𠥶𤗕𨀩𠥬。

## 2016/06/27

修改或重修以下字元：
𥺙𦼊𧀧𧼔𩜁𩟒𩩡𪅋。

## 2016/06/26

修改或重修以下字元：
䈊䉄䔖䗀䬋䮚𠡭𠻱𡕮𡹃𡺿𡻴𢔁𢩑𣍚𣣋𣥻𤷖。

## 2016/06/20

修改或重修以下字元：
㒂㗯㥩㦋㨋㵔㵭㶆㸙䃴䊰䎞䐗䘄䠧䡤䣝䬡䰇䰞䰩䵭。

## 2016/06/13

修改或重修以下字元：
直値值嗭埴徝悳惪憄植殖淔犆矗禃稙置㥀㨁㯰䐈。

## 2016/06/12

修改或重修以下字元：
㐟𠐡𠓽。

## 2016/06/10

修改或重修以下字元：
稪複鍑蕧𠣴𠣾𡐣𡑉𡞪𣦇𤸑𥦸𥨍𥪚𥳇𥵩𥷱𦎭𦩟𧄏𧕡𧼱𩋟𩜲𪃃𪐒𫓍。

## 2016/06/09

修改或重修以下字元：
彖剶墬掾椽櫞盠篆緣𠭣𥯵𩘐。

## 2016/06/08

修改或重修以下字元：
㙔㦣䍷䘙䙟䪏䪐䪑䪒䪓䪔䪕䪖䪗䪘䪙䪚䪛䪜䪝。

## 2016/06/07

修改或重修以下字元：
偉喡圍媁幃徫愇暐椲湋潿煒瑋禕稦緯葦衛褘諱讆違郼鍏闈韋韌韍韎韏韐韑韒韓韔韕韖韗韘韙韚韛韜韝韞韠韡韢韣韤韥颹。

## 2016/06/06

修改或重修以下字元：
㜄䑺䫸䫹䫺䫻䫼䫽䫾瘾稳。

## 2016/06/05

修改或重修以下字元：
堫䍟𡆅𡞧𣞛𡆅𡞧𣞛𥍺𥓻𦑨𦖸𧛝𧱭𧼬𨍈𨔩𨲔𨺡𩋯𩱅𪃊。

## 2016/06/04

修改或重修以下字元：
𡫞𢆂𢋅𢔢𢶖𢾄𣂮𣈥𤀨𤚎𤻍𦩞𦸄𧱬𧼯𨵦𨽙𩜶𪃎𪉰𪍍𪎨。

## 2016/06/03

修改或重修以下字元：
乌鸟⻦愈㓱㡏㢏㺄㼶䃋䕆䜽䠼䤅䩱䬔䵉𠕦。

## 2016/06/02

修改或重修以下字元：
𤦛㨏𣁗㸅䐚䲙䳭𠐉𠨞𠨠𡖖𡷦𣣝𣩃𤊵𥠈𥣮𨂢𪃹。

## 2016/06/01

修改或重修以下字元：
致緻㨖㮹㴛䞃䦯𠊷𡍶𤸓𥠽𦟔𦥐𦳙𧛢𧤡𧩼𨂤𩋩𩹈。

## 2016/05/31

修改或重修以下字元：
𥯓㰽䞁䤷𠸯𡹶𥈔𥍻𥔌𦖧𧓱𩀀𩻖𨤎。

## 2016/05/30

修改或重修以下字元：
蚤慅搔溞瑵瘙糔颾騷骚鰠鳋鼜㲧𠋺𠹏𥰱𦻩𧂩。

## 2016/05/29

修改或重修以下字元：
𣣶𥎆𥰶𦎱𦢽𦤬𦧮𦵯𦺧𩏓𩝛𩡔𩥌𩪃𩮝𪇜𪙏。

## 2016/05/28

修改或重修以下字元：
㝬㪡㮫㲅𠟽𠢆𡁁𡟲𡫴𡮞𢞐𢞩𢻜。

## 2016/05/25

修改或重修以下字元：
饈馐鱃䡭𥀞𦟤𦪋𩘭。

## 2016/05/23

修改或重修以下字元：
揺摇滛瑶謡遥𧡾膡謄饼。

## 2016/05/22

修改或重修以下字元：
縝缜蒖衠謓蹎鎮鎭镇闐阗顚顛颠鬒鷆鷏黰齻𡒆𧷒。

## 2016/05/21

修改或重修以下字元：
眞真傎厧嗔塡填嫃寘嵮巅巓巔慎愼搷攧槇槙滇瑱瘨癫癲瞋磌禛稹窴。

## 2016/05/18

修改或重修以下字元：
塭𨷐膄㟬𦣉𡾛𣝂𩴺。

## 2016/05/16

修改或重修以下字元：
𢔵𥰸𠋻𢱩𤠎𦔎𧏧𣁋𥰙𧢓。

## 2016/05/14

修改或重修以下字元：
𢠛𪎒𪎲𠠣𢌑𪎚磙㙥㨰䙛䜇𠞬𡻨𢟦𧸫𨎊。

## 2016/05/13

修改或重修以下字元：
赁赂赃资赅赆赇赈赉赊赋赌赍赎赏赐赓赔赕赖赘赙赚赛赜赝赞赠赡赢赣。

## 2016/05/11

修改或重修以下字元：
販账质贩贪贫贬购贮贯贰贱贲贳贴贵贶贷贸费贺贻贼贲贳贵贽贾贿赀。

## 2016/05/10

修改或重修以下字元：
粧賽贋𠻦𦟣𧫝宠挚絷蛰贽鸷。

## 2016/05/08

修改或重修以下字元：
櫭䀈䇒䊠䐴𠌰𡃢𡄊𡏲𡒖𡳅𢟪𢷽𣯦𦟡𧐆𧫜𩞊𩞚𩺺𪄵。

## 2016/05/06

修改或重修以下字元：
䆰䉩䉱䌔䙔䡱䥲䧢䩽䳼蘰𠼦。

## 2016/05/05

修改或重修以下字元：
匿嫟嬺慝暱㥾䁥䘌𡠷𢤃𣘗𧏾𩺱𪐌𪙛。

## 2016/05/01

修改或重修以下字元：
㜜㟼㠂㥿䦋䫨䮯䵅𠞪𠢕𢕟𢧴𢳆𣊁𣘢𦪈𨄨𨅚𨫼𩕀𩘮𩪋𩪕𩮯𩱏潸䨷𢋮𢿨𣽽𤼑𦇕𦡨𧾬𨝵𩆤𩟴𢋚。

## 2016/04/30

修改或重修以下字元：
㦥䘆䜢䧮𢖘𤼂𧾨𨏥𩍹瀓𢷸𩧊𩦦𥲠䟈𢶋𦼺㗽䦳𥀾𥖡𧬰墷鞾韡驊㠏𧑍𧤻𨣄𦾏𩀵𪏥㟿㬒䁳䒎䥈𢟨𣯬𧬏𩅁𩪎𣍜𪏬穝𢽠嬍撧暳𣊄。

## 2016/04/29

修改或重修以下字元：
㔇㗨㗶㙠㜌㝅㩓㩔㯏㱭㱼㱽㱾㱿㲀㲁㲂㲃㲄㲅㲆㲇㲈㲉㲊㷤㷫㺉㿄㿦䃑䃜䃲䅽䈲䉨䉬䊛䌓䍍䐨䓈䕠䗟䚨䝂䝘䟝䡰䥣䩔䬦䯴䰉䰔殺穀。

## 2016/04/28

修改或重修以下字元：
蔎蔱蕟藙蘙蘻螌螜蟿蠮褩襏觳設謦譭设豛豰贀蹳軗轂轚酘醫醱鈠鍛鎜鎩鏧鏺鑿锻鞶韾馨驋骰鱍鷇鷖黳。

## 2016/04/27

修改或重修以下字元：
磐磤磬礊祋穀竐糓糳緞縏縠繄繋繫缎罄罊羖翳聲股腶臀臋般芟葮蒑蒰。

## 2016/04/26

修改或重修以下字元：
毇毈毉毊没溵漀潑澱瀊瀔瀫炈煅燬瑖瑴瑿疫瘢癈癜癹發盤瞉瞖砓碫。

## 2016/04/25

修改或重修以下字元：
椴榖榝槃樧橃檓檕櫠殁殳殴段殶殷殸殹殺殻殼殽殾殿毀毁毂毃毄毅毆。

## 2016/04/24

修改或重修以下字元：
伇匓吺嗀坄垼塅墢墼壂媻嫛幋廄廏廢彀役愨慇慤投搫搬摋撀撃撥擊杸。

## 2016/04/23

修改或重修以下字元：
场扬杨殇汤炀烫畅疡砀肠荡觞饧。

## 2016/04/22

修改或重修以下字元：
聚藂鄹驟骤㔌㵵䝒䠫𠏭𨽁潀䝦𠍸𧑄𨬹。

## 2016/04/21

修改以下字元：
㻧䑝䑞䑟䒉䗲䚏䚬䢬䢯䫰䮪䮼䴄𤯷𦨁𬧓。

## 2016/04/20

修改以下字元：
瞬瞵磔磷粦粼繗翷膦舛舞荈蕣謋蹸躌轔辚遴鄰鏻隣驎鱗鳞麟㔂㘶㵲㷠。

## 2016/04/19

修改以下字元：
舛亃傑僢僯僲儛噒嫾嵥嶙憐搩撛斴暽曻桀桝椉榤橉橓滐潾燐獜璘甐疄。

## 2016/04/18

修改或重修以下字元：
垂倕厜唾埵娷崜捶棰涶甀睡硾箠綞缍腄菙諈郵錘锤陲㩾㻔䅜䍋䮔䳠。

## 2016/04/16

修改或重修以下字元：
益嗌塧搤榏溢獈縊缢膉艗螠蠲謚谥貖賹鎰镒隘鷁齸㜋㬲㱲䅬䚊。

## 2016/04/15

修改或重修以下字元：
受授涭綬绶辤閿阌㖟㥅䛵舜僢橓瞬蕣愛僾噯嬡懓曖燰璦皧瞹薆鑀靉鱫。

## 2016/04/14

修改或重修以下字元：
往暀迬𠉫𠍧𢔎𢚇𢛛𣒈𣶂𥆜𦨁𦨄𨓹𨝇𪫬匩𡯭𡯲𢔷𢝎𢞪𣶕𤝵𢓸𢙌𢼟𣈧𣢫𤝶𦨃。

## 2016/04/13

修改或重修以下字元：
主乼住妵宔嵀拄柱樦殶注炷疰砫紸罜蘣蛀註跓軴鉒霔飳駐驻麈黈㗟㹥䇠䝬䪒𠣕𠩈𠰍𡸌𢦴𢨸𤔕𤤛𥅖𥘭𥦠𥩣𥯸𦊝𦗊𦙴𧉶𧏼𧣓𨈫𨲢𨳳𨾨𩒊𩨻𩶃𩿢𪌘𪏜𪐴𪚹𬷗。

## 2016/04/12

修改或重修以下字元：
永咏怺昹詠栐泳眿脉䘑羕漾樣㨾㫤霡䳮昶𡡂𩞭𨠕𩈗。

## 2016/04/11

修改或重修以下字元：
讥讦讧讨让讪讫训议讯记讲讳讴讵。

## 2016/04/10

修改以下字元：
誠闃剎脎𨦅阍阎阏阐阑阒阙乌鸟則则坚竖竮匉𠀋𡣪𡪢𣜜𥛆𦃈𦉇𧄹𠉕。

## 2016/04/09

修改以下字元：
暅堩恆揯絚緪㮓䱍䱭紁肞芆扠杈议舣蚁仪。

## 2016/04/08

修改以下字元：
環碭亩兰关农浓侬哝脓产纵怂灿窍窜。

## 2016/04/07

修改以下字元：
鈁鋏鋁鋌𨦅銚銘銃銀鋤鍋錚鐧鍀錮鏟鍁鍃錠鍵鋸鏘鍬鍾鍰鍍鎇鎦鎬鐓鏈鏗鐨鎿鑷鑔鑣鑲揿衔。

## 2016/04/04

修改以下字元：
钅钆钇针钉钊钋钌钍钎钏钐钒钓钔钕钗钙钚钛钜钝钞钟钠钡钢钣钤钥钦钧钨钩钪钫钬钭钮钯钰钱钲钳钴钵钶钷钸钹钺钻钼钽钾钿铀铁铂铃铄铅铆铈铉铊铋铌铍铎铐铑铒铕铖铗铘铙铛铜铝铞铟铠铡铢铣铤铥铧铨铩铪铫铬铭铮铯铰铱铲铳铴铵银铷铸铹铺铼铽链铿销锁锂锃锄锅锆锇锈锉锊锋锌锍锎锏锐锑锒锓锔锕锖锗锘错锚锛锝锞锟锡锢锣锤锥锦锨锩锪锫锬锭键锯锰锱锲锴锵锶锷锸锹锺锻锼锾锿镀镁镂镄镅镆镇镉镊镌镍镎镏镐镑镒镓镔镖镗镘镙镛镜镝镞镟镡镢镣镤镥镦镧镨镩镪镫镬镭镯镰镱镲镳镶。

## 2016/04/03

修改或重修以下字元：
闋阕隥霯騤驋鱍鼟㔁㔇㗶㡠㡧㲪䆸䉬䔲䕠䗳䙆䙞䚨䠏䠬䤆䮴䳫䳾𩞽。

## 2016/04/01

修改以下字元：
癸癹登發睽瞪磴竳簦聧膯艠葵蕟藈襏覴證蹬蹳邆鄈鄧醱鍨鏺鐙镫。

## 2016/03/30

修改以下字元：
癶⽨僜凳噔墢墱嬁嶝廢憕戣揆撜撥暌楑橃橙櫈櫠湀潑澄燈猤璒癈。

## 2016/03/29

修改或重修以下字元：
苉萣穴坹屄岤柼泬狖茓袕貁鴥鴪䴳⻱。

## 2016/03/28

修改或重修以下字元：
闱闳闵闶闼阀阁阂阃阄阅阆阈阉阌冯吗妈杩犸玛码蚂马驯驱。

## 2016/03/27

修改或重修以下字元：
姘姣孝孰寐射謝屆延誕徒廢癈廄廏數垪丈丙炳柄抦为亙恆交仗仞使便健兒全史吏吝呆告咬嗤囁郷击軍。

## 2016/03/26

修改或重修以下字元：
幸倖悻斧旅更杖朩校栓梗楠南歲忍技拴摩麾支文斐斈斎斊斜。

## 2016/03/25

修改或重修以下字元：
歰派浩涎洴栟燮爨父爸爹爺爷爻狡玟瓊瓨瓬瓭瓳瓴瓵瓹瓺瓻瓾瓿甀甁甂甄甈甉甊甋甌甎甐甒甓甔甗。

## 2016/03/20

修改或重修以下字元：
甦痊瘉癒癐的晧皓硬硇垴恼脑綬。

## 2016/03/19

修改或重修以下字元：
捋窖窟筵粂粳糙絞繅罺卉𠮓。

## 2016/03/18

修改或重修以下字元：
耳耶聕聳聲聾聱聟聻廳綛縊肺脈衇腱融致舁舂舄艰艳艾蓺。

## 2016/03/15

修改或重修以下字元：
篾蔑幭懱櫗瀎礣蠛衊襪鑖韈韤鱴㒝㩢䁾䌩䩏䯦。

## 2016/03/13

修改或重修以下字元：
艺节苪茸荃華樺嬅嘩譁燁曄蘭蘶虔虱蚉蚊蛟蛢蟄衂衄衛衞补衬衷補繭羿。

## 2016/03/11

修改或重修以下字元：
凡帆杋梵汎滼盕矾竼舤舧芃訉軓釩钒㕨㞩㺸䭵𠆩䏎䖠

## 2016/03/10

修改或重修以下字元：
蜑蜒褒襃襪襺觼訒灷誁誠認誥譅计订讣认。

## 2015/11/29

修改或重修以下字元：
尚尙傥儅償儻党劏嘗嘡噹嚐堂壋嫦常幥憆戃掌摚撐撑擋攩曭棠樘橕橖檔欓漟澢灙爣牚瑺璫瓽甞當瞠矘礃礑簹糛罉膛艡螳蟐蟷裳襠譡讜谠賞贘赏蹚鎲鏛鏜鏿鐣鐺鑜钂镗闛闣隚鞺饄饓鱨黨鼞㑽㒉㗬㙶㦂㼕㽆㿩䉎䟫䣘䣣𦈹𨅝𦉘。

## 2015/11/27

重修以下字元：
良敗财败贤页轻趹較迭送逐造遨豓貞負頁責貫賆賋賲賞贝贞负贡责滦。

## 2015/11/26

重修以下字元：
頩饄馼駁駛駝骼骾髦鬮鮫鯌鮩鯅鯁鰋鰸鰲𪃁。

## 2015/11/25

重修以下字元：
华吪哗囮埖婲晔杹桦椛沎炛烨硴糀花蒊訛誮讹貨货鈋錵铧靴骅魤㗾𠵅𢯘𧢽𩲜。

## 2015/11/24

重修以下字元：
鏜鐺噹鐣閔队隻雙雯靠靫靭靱靹靼鞅鞆鞋鞦鞭韃韈韌韧韩韪韫韬。

## 2015/11/23

重修以下字元：
焅梏軔捂捁酷爨㸑爂璺舋釁亹斖虋釜釵釩釰鈕鈴鉼鉽銓鉸鋯鋋。

## 2015/11/22

重修以下字元：
荓荵荥荦荧莚莻筶⻧卤鵠鵧鶿鹹鹾麨黝黨黽鼚鼛齑龝龹𠂢揵詮。

## 2015/11/20

重修以下字元：
圹扩旷犷矿纩邝恲懿。

## 2015/11/18

重修以下字元：
斗头奓釸洬舛。

## 2015/11/16

修改或重修以下字元：
異兾冀廙懻戴潩瀵瀷瀻熼禩穓糞翼襶趩霬驥骥龭㔴㢞䆊䆏䔬。

## 2015/11/15

修改以下字元：
麀麁麈麌麝。

## 2015/11/12

修改以下字元：
𠤕赀仳毕毞毙绲哔筚荜跸。

## 2015/11/10

修改以下字元：
弼宿摍樎縮缩蓿蹜鏥㜚㴼䈹䑿。

## 2015/11/09

重修以下字元：
皆偕勓喈堦媘揩楷湝煯瑎稭蒈蝔諧谐鍇锴階鶛龤㾬䃈䡡。

## 2015/11/07

重修以下字元：
旨嘗恉指栺稽脂詣诣酯鑙鮨鴲嚐鱨耆嗜愭搘榰蓍螧鬐鰭鳍。

## 2015/11/05

重修以下字元：
老佬咾姥峔恅栳狫珯硓蛯銠铑鮱荖耄耈耋。

## 2015/11/03

重修以下字元：
昌倡唱娼晿椙淐焻猖琩菖裮誯錩閶阊鯧鲳替僣潜譛鐟。

## 2015/11/02

重修以下字元：
曾曽僧噌增増層嶒憎朆橧潧熷璔甑矰磳竲繒缯罾譄贈赠蹭鄫鏳驓鬙鱛囎。

## 2015/11/01

重修以下字元：
會儈劊噲嬒廥徻懀旝朇檜澮燴獪璯癐瞺禬糩繪膾薈襘譮鄶鬠鱠。

## 2015/10/29

重修以下字元：
𠂂。

## 2015/10/28

重修以下字元：
智潪。

## 2015/10/27

重修以下字元：
橥櫫濐鱪奲撦譇廜潳鷵藸蕏櫡曙濖糬薯鱰墸擆躇鐯藷儲櫧蠩储槠瀦潴嘟。

## 2015/10/25

重修以下字元：
者乽偖啫堵奢媎屠帾斱暏暑楮殾渚煑煮猪琽瘏睹箸緒緖绪署翥著蝫褚覩觰諸诸豬賭赌赭踷都醏鍺锗闍陼鯺㗯䎞書圕。

## 2015/10/23

重修以下字元：
猒厭厴嚈壓嬮懕懨擪擫檿靨饜魘黶压厌厣恹靥餍魇。

## 2015/10/22

重修以下字元：
意億噫嬑憶檍澺燱癔繶臆薏譩醷鐿镱鷾。

## 2015/10/21

重修以下字元：
竟傹境摬樈滰獍璄竸糡鏡镜。

## 2015/10/20

重修以下字元：
章傽墇嫜嶂幛慞暲樟漳獐璋瞕蟑鏱障騿鱆彰鄣竷贑贛赣瘴蔁遧麞戅戇灨戆譬。

## 2015/10/19

重修以下字元：
亘刯咺垣姮宣峘恒晅桓洹烜狟絙荁貆喧媗愃揎暄楦渲煊瑄睻碹箮翧萱蝖諠鍹鰚。

## 2015/10/18

重修以下字元：
曶曹曺傮嘈嶆慒槽漕糟艚蓸螬褿蹧遭醩鏪鰽。

## 2015/10/17

重修以下字元：
魯鲁嚕擼櫓氌瀂穭艪鑥噜撸橹氇镥。

## 2015/10/16

重修以下字元：
音偣喑堷愔戠揞暗湆腤諳谙隌歆韴韵韶韷韸韹韺韻韼韽頀鶕黯摿瘖窨罯萻韾響嬂幟旘樴熾織職膱蟙識軄噷闇嬜噾蘵。

## 2015/10/15

重修以下字元：
沓崉涾濌誻踏錔鞜朁僭噆嶜憯撍橬潛熸簪糣蠶譖谮鐕㔆。

## 2015/10/14

重修以下字元：
楿萫香馚馛馜馝馞馟馠馡馢馣馥馤馦馧馨馩馪馫麘黁。

## 2015/10/13

重修以下字元：
曷偈喝堨嵑幆愒揭暍朅楬歇毼渴猲碣竭羯蝎褐謁谒輵鍻鞨餲馤騔鶡齃蠍遏葛噶嶱擖獦礍臈譪轕藒藹靄蔼霭。

## 2015/10/12

重修以下字元：
𦟁蚏䩗覇霸壩欛灞㶚䃻𢥻𢺞𣠽𧈉𩽷。

## 2015/10/11

重修以下字元：
执犱秇訙蓻蓺褹藝漐褺謺驇鷙势蛰鸷。

## 2015/10/10

重修以下字元：
巩恐筑茿蛩跫銎鞏築篫㧬㼦䂬䅃䊄䡗㮪飞。

## 2015/10/09

重修以下字元：
嬴羸臝蠃贏赢驘鸁攍瀛籝籯䇔䊨䌱㜲䃷䑉䕦㬯㱻䌴𦝠𦟀。

## 2015/10/08

重修以下字元：
具俱倶埧惧椇犋颶飓。

## 2015/10/06

重修以下字元：
奐喚寏愌換渙煥瑍瘓奂唤换涣焕痪。

## 2015/10/05

修改以下字元：
𧃠𢦊。

## 2015/10/04

修改或重修以下字元：
㪛㽎䤁䨢䫖𣞵𤯉𥖘𥪘𦂼𦝧𧗀𧡪𩅷𩅾𩜱𪉯。

## 2015/10/02

修改或重修以下字元：
甚偡勘卙啿堪墈夦媅尠嵁愖戡揕斟椹歁湛煁瘎碪磡糂葚蘛諶谌踸鍖霮黮。

## 2015/10/01

重修以下字元：
丯壻墫壿愚憊備㡛裹眔瘝鰥㱎嚃䜚电電经迓𨑕俬凨垇莣哖趓譬嘦嫑捋綬蓺凼凿俧龹繅鄛。

## 2015/09/29

修改以下字元：
门闩闪闫闭问闯闰闲间闷闸闹闺闻闽闾阋阔阕阖阗阙阚。

## 2015/09/28

修改以下字元：
㬶𦛩𡨟𡷥𢁏𢍎𣨓𣫀𤶳𥍱𥞴𥶚𥺊𦮽𧋓𧠼𧻰𨁒𨖄𨖰𨘴𨴬𨻴𩇸𩋺𪳤。

## 2015/09/27

修改以下字元：
靠頶鯌鵠鹄㵆㸆䎋䒃䔏䗢䚛䧊䧼䶜𠻛𠻧𡇪𡑛𡜲。

## 2015/09/26

修改以下字元：
告吿俈勂哠喾嚳峼悎慥捁晧梏浩澔焅牿皓硞祰窖筶簉糙聕艁誥诰造郜酷鋯锆。

## 2015/09/25

修改以下字元：
𠮱𠮲𡓰𡘆𡚯𡧈𢁢𢘢𢙁𣂭𤆏𤔧𤷷𥁄𥁡𥃖𥏾𥫡𥱀𦈣𦯟𦲰𧆜𧈯𧘎𧥦𧨄𧩊𧪮𧿉𨜆𨡖𨢰𩂧𩅞𩉞𩊓𩏬𩑕𩨗𪾨𫋾𠿋𣙾。

## 2015/09/24

修改以下字元：
蕚誇萼瓠匏胯粵絝袴侉晇㓵謣颚鰐鳄㟧䊸𥃳。

## 2015/09/23

修改以下字元：
污虧圬夸跨鄂愕顎鰐釫綔挎垮鮬荂咵陓鴮摦迃咢崿遌諤齶雩芌扝肟。

## 2015/09/22

修改以下字元：
𧟒𧣨𧱽𨑆𨑇𨑉𨑊𨑋𨑌𨤉𨲳𩀭𩅽𩇀𩟊𩱜𩱨𩼅𪁧𪆯𪑾𪒬𪓧𪘝𫋏。

## 2015/09/21

修改以下字元：
𠘊𠸸𡝌𡻌𢖢𢛚𢟲𢟹𢥯𢦿𢾯𣊤𣋏𣘣𣭽𣯋𣰊𤅛𤚨𤚾𤡠𤣜𤱼𤴌𤼝𥗸𦍇𦗳𦵢𦸳𧒏𧗈。

## 2015/09/20

修改以下字元：
㖘㦺㫳㰮㲀㺜䀼䁸䃩䅶䆣䔚䞅䟴䢅䢇䢈䢉䣅䥎䫃䳲䵜。

## 2015/09/19

修改以下字元：
裖褥襛誫譨賑赈辱農辳辴鄏醲鋠鎒陙震鬞鷐麎齈。

## 2015/09/18

修改以下字元：
辰侲傉儂唇嗕噥娠媷宸屒嶩帪憹振搙擃敐晨曟桭槈檂欁浱溽滣漘濃燶癑磭祳禯穠縟繷缛耨脣脤膿莀蓐蕽薅蜃蜄。

## 2015/09/16

修改以下字元：
𠉨𠜨𠧓𡵑𢢍𣅉𤉟𤶝𦓖𩈢𩊫𫀷䜀𠽼𡡟𢕬𢡉𣚟𣿠𤖗𤠏𧳺𧴙。

## 2015/09/15

因直排技術及字樣外框輸出技術關係，借助趙瑾昀先生以「I.明體」改建而成的「南廱明體」，重整「I.明體」字樣。「南廱明體」的部份修改形體，也符字理，亦常見於彫版字裏，日後將列爲「I.明體」異體字型中的字樣。

修改以下字元：
釉刃仞忍劒籾綛荵訒認軔轫靭韌韧㣼䏰歰譅㒊䔼。

## 2015/08/18

在Extc先生協助下，多次嘗試測試直排問題。

## 2015/07/13

在Extc先生協助下，多次嘗試測試直排問題。

## 2015/06/25

在Extc先生協助下，多次嘗試測試直排問題。

## 2014/06/17

得到趙瑾昀先生協助，新增以下字元：
𡵭𪄠𪩁𠅤𠳐𡎚𡐓𡑍𤧛𥕢𥗽𥻗𦭜𦰡𨭉𨺙𪤗𪨰𬌗𬒔𩖶𩞭𪎰。

收錄漢字已完全覆蓋《通用規範漢字表》及《全國鄉鎮級地名生僻用字讀音》。

## 2014/06/16

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-e缺字：
𬶿𬷄𬷉𬷒𬷔𬷗𬷙𬷝𬷡𬷢𬷦𬷧𬷫𬷬𬷰𬷱𬷳𬷵𬷷𬷺𬸽𬹵。

## 2014/06/14

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-e缺字：
𬫄𬫆𬫑𬫖𬫗𬫝𬫠𬫥𬫧𬫭𬫰𬫱𬫺𬫻𬫾𬬂𬬈𬬉𬬊𬬎𬬗𬬡𬬢𬬣𬮅𬮆𬮑𬮖𬮦𬯁𬯲𬯳𬯵𬯸𬰁𬰈𬰕𬰦𬰨𬰬𬱋𬱏𬱴𬲝𬳯𬳰𬴧𬴬𬴽𬴾𬵁𬵂𬵄𬵆𬵇𬵈𬵊𬵋𬵌𬵍𬵏𬵐𬵑𬵒𬵔𬵕𬵖𬵗𬵚𬵜𬵝𬵞𬵟𬵠𬵡𬵢𬵣𬵦𬵧𬵨𬵩𬵪𬵫𬵬𬵭𬵯𬵰𬵱𬵲𬵳𬵴𬵵𬵶𬵷𬵹𬵺𬵻𬵽𬵾。

## 2014/06/13

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-e缺字：
𬜣𬜩𬜭𬜮𬜰𬜱𬜲𬜴𬜷𬜻𬜼𬝂𬝍𬝔𬝖𬝘𬝝𬝞𬝥𬝦𬝩𬝭𬝻𬝿𬞉𬞍𬞐𬞔𬞙𬞡𬞦𬞸𬞹𬞼𬟂𬟋𬟐𬟒𬟓𬟘𬟢𬟦𬟶𬟷𬟸𬠀𬠂𬠉𬠊𬠋𬠍𬠎𬠒𬠘𬠙𬠝𬠞𬠟𬠤𬠧𬠩𬠬𬠭𬠮𬠯𬠳𬠴𬠻𬡀𬡛𬡥𬡩𬡽𬡾𬢄𬢆𬢖𬢵𬢷𬢽𬣄𬣐𬣕𬣖𬣗𬤲𬥁𬦁𬦜𬦦𬦭𬦷𬦺𬧅𬧓𬧠𬧧𬧬𬧭𬧳𬨜𬨯𬩖𬪦𬪬𬪻𬪿。

## 2014/06/11

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-e缺字：
𬉹𬉺𬋈𬋎𬋠𬋬𬌟𬌩𬌲𬌼𬍔𬍖𬍯𬍳𬎤𬎦𬎨𬎫𬎮𬎯𬎰𬎴𬏈𬏐𬏣𬏶𬏼𬐤𬑈𬑎𬑐𬑖𬑜𬑝𬑢𬑨𬑬𬑽𬒅𬒑𬒨𬒭𬒲𬒳𬓁𬓄𬓆𬓇𬓖𬓦𬓬𬓲𬓳𬓹𬔀𬔎𬔏𬔨𬔬𬔰𬔸𬕁𬕋𬕎𬕧𬕮𬕶𬖇𬖒𬖣𬖰𬖻𬗖𬗙𬗚𬗬𬘈𬙰𬚝𬚩𬚹𬚽𬛂𬛌𬛓𬛜𬜋𬜒𬜖𬜗。

## 2014/05/26

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-e缺字：
𫺏𫺔𫺗𫺭𫻃𫻛𫻥𫻧𫼋𫼓𫼳𫽪𫽬𫾅𫾒𫾭𫾹𫾻𫿭𫿾𬀗𬀧𬀬𬀻𬂃𬂗𬂛𬂜𬂟𬂠𬂡𬂬𬂳𬂵𬂶𬂿𬃉𬃏𬃓𬃗𬃝𬃢𬃣𬃪𬃰𬃵𬃶𬃷𬃺𬃾𬄉𬄋𬄌𬄎𬄒𬄕𬄖𬄗𬄚𬄟𬄠𬄣𬄥𬄧𬄫𬄲𬄶𬄸𬄺𬄻𬄼𬅅𬅇𬅊𬅋𬅎𬅒𬅕𬅗𬆍𬆔𬆕𬆛𬆲𬇐𬇔𬇕𬇜𬈇𬈑𬈘𬈬𬈵𬉘。

## 2014/05/20

得到趙瑾昀先生協助，新增以下字元：
㘚㙍㙘㙦㠣㮾㳇㶲㸆㸌㽏㿠䓫䗴䢺嘡堎堐塅墘墶壋壪峂峧拤摃暅梽榃槜汈涐滧疍硔碶礄簕簰苉茓萣蓢蹽鏰靰鞡餎餏魢鿍。

## 2014/05/17

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-e缺字：
𫠥𫡤𫡷𫢏𫢽𫣁𫣄𫣒𫣕𫣵𫤘𫤜𫤞𫤰𫥠𫥲𫥻𫦈𫦤𫦥𫦫𫦶𫦹𫦿𫧍𫧤𫨭𫨻𫩧𫩮𫪒𫪛𫪤𫪭𫫌𫫍𫫠𫫭𫫱𫬇𫭏𫭗𫭱𫮅𫮎𫮤𫮭𫮺𫮾𫯸𫯹𫰀𫰁𫰓𫰚𫰟𫱈𫱉𫱋𫱣𫱧𫱻𫲧𫲩𫲮𫲵𫳍𫳐𫴴𫵗𫵩𫵴𫵽𫶙𫶝𫶠𫶧𫷊𫷑𫷒𫸨𫸾𫹓𫹧𫹨。

## 2014/05/13

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-c/d缺字：
𪠈𪭺𪷂𪼃𫈴𫋾𫒀𫝊𫝓𫝷𫝼𫞂𫞋𫞬𫞰𫞽𫟉。

## 2014/05/09

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-b缺字：
𩤀𩩐𩩙𩪯𩪷𩮺𩰓𩱿𩴴𩵉𩹺𩻠𩻡𩼪𪁡𪃈𪇴𪊑𪊖𪊨𪌁𪌈𪌳𪍇𪍒𪎒𪎰𪑲𪔂𪔃𪔄𪔈𪔍𪕍𪕤𪖅𪗇𪘀𪚙。

## 2014/05/07

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-b缺字：
𩈚𩈽𩉞𩊓𩍖𩍹𩐚𩐟𩐠𩐢𩐧𩐿𩖶𩙞𩙺𩚂𩚅𩚈𩚕𩚖𩚩𩚹𩛆𩛞𩛥𩛺𩜆𩜈𩜋𩜏𩜕𩜗𩜯𩜴𩜹𩝙𩝝𩞀𩞃𩞍𩞏𩞑𩞡𩞥𩞧𩞫𩞭𩞷𩟄𩟋𩟱𩟽𩢔𩢝。

## 2014/05/05

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-b缺字：
𦥷𦨃𦪭𦬊𦬞𦬠𦮠𦮶𦱤𦸑𦹇𦼬𦼯𦾏𦾱𦿔𧀹𧁨𧇽𧈪𧊜𧊷𧌊𧏊𧔥𧘂𧘙𧙧𧛔𧛧𧜁𧜏𧞑𧞸𧟨𧥦𧥶𧩮𧩻𧪮𧫢𧬯𧮇𧯆𧯌𧯾𧲨𧴪𧵍𧸙𧸽𧹹𧾨𨅫𨐲𨒭𨒰𨓅𨓤𨓱𨓵𨔝𨔟𨔧𨔫𨔰𨕠𨕣𨕥𨖈𨖊𨖹𨖻𨖿𨗭𨗱𨘢𨘷𨙂𨙕𨙙𨙚𨙟𨚾𨝇𨟌𨠋𨬹𨳝𨶄𨶑𨻪𨽁𨿤𩅞𩅾𩇕。

## 2014/05/01

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-b缺字：
𣢧𣥩𣧢𣩣𣩴𣪍𣮬𣱵𣲨𣵠𣵽𣸲𣸸𣺤𤂣𤄒𤉇𤉣𤋅𤓚𤔐𤕢𤕤𤜵𤣽𤩡𤫴𤯉𤰀𤰞𤲃𤲲𤳘𤴸𤸶𤺄𥀦𥁄𥃲𥃳𥆒𥉏𥉱𥋜𥘇𥘉𥘦𥘬𥘰𥙮𥙿𥛙𥛜𥛲𥜅𥜒𥜦𥟿𥠵𥡴𥭟𥮫𥲀𥺛𥽒𥾆𦁰𦃈𦆢𦇗𦇚𦈢𦈨𦉇𦉳𦋙𦎱𦔘𦖢𦙚𦚨𦚫𦚯𦜉𦜒𦝫𦢪𦢼𦤌。

## 2014/04/28

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-b缺字：
𡭗𡯁𡯑𡯭𡰒𡷤𡷦𡼙𡽃𡿖𢀩𢀴𢀷𢂙𢃂𢆈𢋱𢋿𢓭𢔴𢕒𢖍𢛔𢠵𢡚𢢔𢤚𢤦𢦅𢯱𢱵𢴼𢸭𢻬𢼢𢿌𢿘𢿙𢿠𣁝𣃔𣃚𣄢𣊸𣍟𣍮𣎓𣎜𣏌𣏠𣑭𣒈𣓉𣔱𣘦𣙡𣚓𣚣𣛙𣝋𣟥𣟳。

## 2014/04/27

得到趙瑾昀先生協助，增補收錄於IPAmj明體，卻遺失掉的ext-b缺字：
𠅞𠆻𠈷𠉌𠉕𠋬𠌘𠎹𠑗𠒖𠔔𠔣𠔥𠕀𠚻𠛉𠛹𠞅𠣥𠨧𠭣𠭯𠮓𠮱𠰥𠱐𠵊𠶮𠶷𠻛𠻸𠿋𠿕𡂢𡄻𡆨𡆪𡉏𡊏𡊙𡋳𡌨𡍮𡑞𡑟𡒉𡓤𡔂𡗒𡘆𡘟𡢘𡧈𡧽𡪢𡬶𡭎。

## 2014/04/26

修改以下字元：
肎憊𣥿𤯐䩿𢆟。

## 2014/04/25

新增以下字元：
銭焗䲘。

## 2015/04/20

修改以下字元：
專傳囀惠为伪妫沩㡛。

## 2015/04/13

得到趙瑾昀先生協助，新增正體中文、簡體中文、日文、韓文、越南文的代碼頁，並以文書軟件檢査直排時字元位置、字距等問題。

內木一郎公開發佈「I.明體」字型檔：I.BMing-3.500.ttf，版本資訊爲Version 3.500。

## 2015/04/10

修改以下字元：
獕㓦㕷攧哖趓桚敪倽硶讆鯓莣。

新增以下字元：
礡韨㖵𣄞。

## 2015/04/09

修改以下字元：
凼凿俧㕴諛䳎繅鄛摷龝。

## 2015/04/08

得到趙瑾昀先生協助，新增以下字元：
嘦嫑圗墯桟樧滛経聼賎逺銭頋龬鿋㤀㶘䗏䳱鯓𠀀𠁁𠄌𠄢𠄬𠄷𠕋𠙴𠚣𠮠𠶸𡕒𡕩𡣪𡿧𡿩𡿫𡿮𡿳𢆟𢌛𢌱𤔔𢍁𥁋𥄂𥄳𥨫𥪧𥫔𦈢𦏁𦐇𦐈𦑢𦤝𦥛𨑍𨑒𨑭𨒂𨒉𨒌𪚖𫟋𫠍𢒼仩伬鿈𠆾𢓌𢓁鿉。

修改以下字元：
亿。

## 2015/04/07

修改以下字元：
丯壻墫壿愚憊備㡛裹眔瘝鰥㱎嚃䜚电電经迓𨑕。

## 2015/04/06

修改以下字元：
奐喚寏愌換渙煥瑍瘓唤换涣焕痪。

## 2015/04/05

修改以下字元：
甚偡勘卙啿堪夦媅尠嵁愖戡揕斟椹歁湛煁瘎碪糂葚蘛諶谌踸鍖黮墈磡霮。

## 2015/04/05

修改以下字元：
具俱倶埧惧椇犋颶飓。

## 2015/04/05

修改以下字元：
嬴羸臝蠃贏赢驘鸁攍瀛籝籯䇔䊨䌱㜲䃷䑉䕦㬯㱻䌴𦝠𦟀𦟁。

## 2015/04/04

修改以下字元：
巩恐筑茿蛩跫銎鞏築篫㧬㼦䂬䅃䊄䡗㮪飞㶚䃻。

## 2015/04/03

修改以下字元：
执犱秇訙蓻蓺褹藝漐褺謺驇鷙势蛰鸷。

## 2015/04/02

修改以下字元：
曷偈喝堨嵑幆愒揭暍朅楬歇毼渴猲碣竭羯蝎褐謁谒輵鍻鞨餲馤騔鶡齃蠍遏葛噶嶱擖獦礍臈譪轕藒藹靄蔼霭。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.020。

## 2015/04/01

修改以下字元：
楿萫香馚馛馜馝馞馟馠馡馢馣馤馥馦馧馨馩馪馫麘黁。

## 2015/03/31

修改以下字元：
沓崉涾濌誻踏錔鞜朁僭噆嶜憯撍橬潛熸簪糣蠶譖谮鐕㔆蚏䩗覇霸壩欛灞。

## 2015/03/30

修改以下字元：
音偣喑堷愔戠揞暗湆腤諳谙隌歆韴韵韶韷韸韹韺韻韼韽頀鶕黯摿瘖窨罯萻韾響嬂幟旘樴熾織職膱蟙識軄噷闇嬜噾蘵。

## 2015/03/29

修改以下字元：
曶曹曺傮嘈嶆慒槽漕糟艚蓸螬褿蹧遭醩鏪鰽魯鲁嚕擼櫓氌瀂穭艪鑥噜撸橹氇镥。

## 2015/03/28

修改以下字元：
亘刯咺垣姮宣峘恒晅桓洹烜狟絙荁貆喧媗愃揎暄楦渲煊瑄睻碹箮翧萱蝖諠鍹鰚。

## 2015/03/27

修改以下字元：
斗头奓猒厭厴嚈壓嬮懕懨擪擫檿靨饜魘黶恲懿圹扩旷犷矿纩邝压厌厣恹靥餍魇釸洬舛。

## 2015/03/26

修改以下字元：
章傽墇嫜嶂幛慞暲樟漳獐璋瞕蟑鏱障騿鱆彰鄣竷贑贛赣瘴蔁遧麞戅戇灨戆譬。

## 2015/03/25

修改以下字元：
橥櫫濐鱪奲撦譇廜潳鷵藸蕏櫡曙濖糬薯鱰墸擆躇鐯藷儲櫧蠩储槠瀦潴嘟。

## 2015/03/24

修改以下字元：
者乽偖啫堵奢媎屠帾斱暏暑楮殾渚煑煮猪琽瘏睹箸緒緖绪署翥著蝫褚覩觰諸诸豬賭赌赭踷都醏鍺锗闍陼鯺㗯䎞書圕。

## 2015/03/23

修改以下字元：
智潪會儈劊噲嬒廥徻懀旝朇檜澮燴獪璯癐瞺禬糩繪膾薈襘譮鄶鬠鱠。

## 2015/03/22

修改以下字元：
意億噫嬑憶檍澺燱癔繶臆薏譩醷鐿镱鷾竟傹境摬樈滰獍璄竸糡鏡镜。

## 2015/03/21

修改以下字元：
曾曽僧噌增増層嶒憎朆橧潧熷璔甑矰磳竲繒缯罾譄贈赠蹭鄫鏳驓鬙鱛囎。

## 2015/03/20

修改以下字元：
倡唱娼晿椙淐焻猖琩菖裮誯錩锠閶阊鯧鲳替僣潜譛鐟。

## 2015/03/19

修改以下字元：
老佬咾姥峔恅栳狫珯硓蛯銠铑鮱荖耄耈耋。

新增以下字元：
粩。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.010。

## 2015/03/18

修改以下字元：
旨嘗恉指栺稽脂詣诣酯鑙鮨鴲嚐鱨耆嗜愭搘榰蓍螧鬐鰭鳍。

## 2015/03/17

修改以下字元：
皆偕勓喈堦媘揩楷湝煯瑎稭蒈蝔諧谐鍇锴階鶛龤㾬䃈䡡。

## 2015/03/16

修改以下字元：
牝死塟屍斃毙臰葬薧薨髒𠤏駂鴇鸨𠤕。

## 2015/03/15

修改以下字元：
薼儦瀌爊犥皫穮臕藨鑣镳攈攗蘪麗儷囇孋廲彲攦曬欐灑矖穲籭纚襹躧邐酈釃驪鱺鸝。

## 2015/02/02

新增以下字元：
俬凨垇。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.006。

## 2015/01/24

修改以下字元：
鏖麀麁麂麃麄麅麆麇麈麉麊麋麌麍麎麏麐麑麒麓麔麕麖麗麘麙麚麛麜麝麞麟麠麡麢麣麤。

## 2015/01/23

修改以下字元：
鹿塵塶廘摝攟樚漉熝簏膔蔍螰蹗轆辘鄜鏕騼。

## 2015/01/22

修改以下字元：
能態熊熋罷螚褦羆擺犤矲藣襬𠹌欵疑肄窽儗凝寲嶷懝擬癡礙籎薿觺譺。

## 2015/01/21

修改以下字元：
尼伲呢坭妮屔怩抳旎昵柅泥狔痆眤秜胒苨蚭跜迡鈮铌馜埿。

## 2015/01/20

修改以下字元：
丠乖乘兠冀埀嬊燕背苝軰邶鉳鷰乘剩塖嵊溗騬懻驥骥嚥嬿曣臙觾讌酀醼驠偝揹褙鄁㷼。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.005。

## 2015/01/01

修改以下字元：
傾廎潁熲穎蘏蹞頴顈倾庼颍颖㯋䔛㩩。

## 2014/12/31

修改以下字元：
紫胔茈觜訾訿貲赀跐鈭雌頾頿飺骴髭鮆鴜齜龇偨喍嘴蟕㘩㩺㲋㿫䃾。

## 2014/12/26

修改以下字元：
华仳吡坒妣屁庇彘批昆枇枈比毕毖毗毘毙毞沘玭琵疪砒秕笓箆粃粊紕纰肶舭芘萞蚍豼鈚阰魮悂梐狴蜌陛璏倱婫崐崑惃掍棍混焜猑琨窤箟緄绲菎蜫裩輥辊醌錕锟餛馄騉鯤鲲鵾哔筚荜跸媲磇篦膍蓖螕貔鎞毚酁儳劖嚵巉攙欃瀺纔艬讒鑱饞些佌呰呲啙姕庛柴歶泚玼疵皉眥眦砦祡紪。

## 2014/12/25

修改以下字元：
荓荵荥荦荧莚莻筶⻧鵠鵧鶿鹹鹾麀麁麨黝黨黽鼚鼛齑龝龹𠂢𠂂揵詮。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.004。

## 2014/12/24

修改以下字元：
焅梏軔捂捁酷爨㸑爂璺舋釁亹斖虋釜釵釩釰鈕鈴鉼鉽銓鉸鋯鋋鏜鐺噹鐣閔队隻雙雯靠靫靭靱靴靹靼鞅鞆鞋鞦鞭韃韈韌韧韩韪韫韬頃頩饄馼駁駛駝驥骼骾髦鬮鮫鯌鮩鯅鯁鰋鰸鰲。

## 2014/12/22

修改以下字元：
良敗财败贤页轻趹較迭送逐造遨。

## 2014/12/13

修改以下字元：
豓貞負頁責貫賆賋賲賞贝贞负贡责滦。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.003。

## 2014/12/12

修改以下字元：
蜑蜒裳褒襃襠襪襺觼訒訛靴杹沎囮魤貨鈋炛埖婲椛硴蒊糀誮錵灷誁誠認誥譅计订讣认。

## 2014/12/11

修改以下字元：
舤舧艺节芃花苪茸荃華樺嬅嘩譁燁曄蘭蘶虔虱蚉蚊蛟蛢螳蟄衂衄衊衛衞补衬衷補繭羿。

## 2014/12/08

修改以下字元：
耳耶聕聳聲聾聱聟聻廳綛縊肺脈衇腱融膛致舁舂舄艰艳艾蓺。

## 2014/12/07

修改以下字元：
汎捋矾穴窖窟筵篾蔑粂粳糙絞繅罺。

## 2014/11/20

修改以下字元：
甦異當痊瘉癒癐的晧皓瞠硬硇垴恼脑綬。

內木一郎更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.002。

## 2014/11/19

修改以下字元：
歰派浩涎洴栟燮爨父爸爹爺爷爻狡玟瓊瓨瓬瓭瓳瓴瓵瓹瓺瓻瓾瓿甀甁甂甄甈甉甊甋甌甎甐甒甓甔甗。

## 2014/11/17

修改以下字元：
斧旅更曷杖朩校栓梵梗棄棠楠南檔歲。

## 2014/11/13

修改以下字元：
忍悻戴技拴捋摩麾撐支文斐斈斎斊斜。

## 2014/11/12

修改以下字元：
堂姘姣嫦孝孰寐射謝尚尙屆常延誕徒廢癈廄廏。

## 2014/11/11

修改以下字元：
數壓逐垪丈丙炳柄抦为凡帆乖乘亙恆些交仗仞使便俱倖健償兒全匕化北匘匙史吏吪吝呆告咬嗤囁。

新增以下字元：
蹓。

## 2014/11/09

得到Extc先生協助，經過多番艱辛的作業，收復了豎排移位問題。更新「I.明體」字型檔：I.BMing.ttf，版本資訊爲Version 3.001。

## 2014/09/22

嘗試把「I.明體」Version 2.004與「IPAmj明體」Ver.003.01結合，但仍出現豎排移位問題。

## 2014/09/19

IPA以「IPA開放字型授權條款」發佈「IPAmj明體」Ver.003.01。

## 2014/07/07

修正Mac作業系統的支援問題。鑑於字型家族名字須以字母作開首，故把名字由「1.明體」改作「I.明體」，「I」即羅馬數字「1」。

新增以下標點：
‧(u2027)
‵(u2035)
‶(u2036)
⁀(u2040)
╴(u2574)
〞(u301E)
︴(uFE34)
﹏(uFE4F)
﹐(uFE50)
﹑(uFE51)
﹒(uFE52)
﹔(uFE54)
﹕(uFE55)
﹖(uFE56)
﹗(uFE57)

公開發佈「I.明體」字型檔：I.BMing.ttf、I.BMing-bp.ttf，版本資訊爲Version 2.004。兩個字型檔的分別是以下標點是否置中：
、(u3001)
。(u3002)
，(uFF0C)
．(uFF0E)
：(uFF1A)
；(uFF1B)

## 2014/07/06

修改以下字元：
夅㯯䂫䜶䤗佭絳绛胮逄降衛。

## 2014/06/22

修改以下字元：
屯伅吨坉忳扽旽杶沌炖盹砘純肫訰豘軘鈍霕飩魨黗㝄㹠䣩邨㼊頓噸囤迍瓲庉蒓窀芚旾萅䓐韋韌韍韓韛韞韜韎韐韑韔韗韘韙韝韠韡圍偉緯瑋葦諱違闈舛舝舞桀搩磔謋㻧䮪舜僢橓瞬粦僯嶙憐撛潾燐璘磷轔鏻鱗麟粼鄰㔂遴旡邪琊芽雅訝鴉捓鋣蚜谺齖甾緇椔鯔災書記妃配杞紀芑。
部份「糸」部字，部份簡化字。

內木一郎公開發佈「1.明體」，版本資訊爲Version 2.003。

## 2014/06/21

修改以下字元：
益㜋㬲㱲䅬䚊嗌塧搤榏溢獈縊膉艗螠蠲謚貖賹鎰隘鷁齸像僾㚮兺壬荏䇮㶵凭恁栠䋕䣸賃鵀任㤛䛘姙拰栣秹絍袵銋餁䚾妊紝衽軠鈓飪䏕。

## 2014/06/20

修改以下字元：
風颩颪颫颬颭颮颯颰颱颲颳颴颵颶颷颸颹颺颻颼颽颾颿飀飁飂飃飄飅飆飇飈飉飋飌飍偑堸嵐楓檒渢煈猦瘋碸葻諷凐籈薽䙅䳩婹崾闄㟳瑮㜤㶘㻼㽑䊤䐺䚓䨵藫墰瞫賈價檟覆覈僲。

新增以下字元：
飊䙴覄。

## 2014/06/19

修改以下字元：
臿㛼㢎㮑㴙䅤䙄䛽䮢偛喢插敮歃牐鍤乎㭔䉿䴣乯呼垀泘烀苸軤雽虖㙤㦆㯉㻯嘑罅嫭摢歑滹謼鏬保㨐䭋䳰堡堢媬椺湺緥葆褒褓賲沪沍。

## 2014/06/09

修改以下字元：
𡉉𡅙𡂏䶟𣜿𧦠玥刖鈅跀枂岄眀阴䎳仴抈迌𠢕。

新增以下字元：
𠾐𡁯𡁵𡃉𡇙𡝭𡷑𡼏𢆡𢝵𢫕𢴈𤃒𤍤𥟇𦤎𦸅𧒆𨍽𨎊𨧀𨨏𨭆𨸹𩼰𩽈𫒢𪊲𣍐𪜶𠓛亽。

已完成《常用香港外字表》第1.4版中所有字元。

內木一郎發佈「1.明體」試用版，版本資訊爲Version 2.002。

## 2014/06/08

修改以下字元：
塀壳慤腙酞坟惩槩炁癍瞹衮襃鞴。

新增以下字元：
嚹囖膥𣚺酜鉳鍅𡁶𥅾㗒㷧䥑䭾䰾䱗傦啳嗮嘠嶎廍徺椬櫊硓粬聣脌衮贌酼閗鮘𠜎𠳔𠳕𠴕𠵿𠸎𠸏𠹷𠻺𠼻𠾴𠾼。

## 2014/06/05

修改以下字元：
銩䓝孟嗬业亚丵举丧乌乐乔亼。

新增以下字元：
㷛䃟䓬䦉叾鑀。

## 2014/06/04

修改以下字元：
𨳊𨳕冴。

新增以下字元：
㨘乸冚冧咗唞啩啱啲喺嗰嘢嘥孭掹揼燶癦瞓膶裇踎軚𠝹𠱁𠺝𠺢𡃁𢯊𢱕𢵌𤓓𤷪𦟌𨋢䢂𨈇嚡煀蹾閪𠱸𠲖𠳏𠹶𠼭𠿪𡁜𡅅𢃇𤶸𥅈𨳍𨳒𢱑。

已完成《常用香港外字表》第1.4版中的A、B、C、1、2、3、4級字元。

## 2014/06/03

修改以下字元：
蔑㒝㩢䁾䌩䩏䯦幭懱櫗瀎礣蠛衊襪鑖韈韤鱴篾䘊幾㙨㡮䟇䤒僟嘰機耭蟣鎇慈禌糍磁滋鷀螆甆䈘㘂䗹襠釋釉䤟屄覅。

新增以下字元：
鎅戙㗎。

## 2014/06/02

修改以下字元：
䝧伨均筠鋆鈞憌昀畇蚐袀受授舜瞬愛噯曖璦耳耷耸聂聟聲聳聻聾聴空倥啌崆悾控曌椌涳箜羫腔谾鞚鵼罙軣遷䉦櫏躚韆僊鬯鬱䖇灪爩鬰愣楞团材犲豺財财釮閉闭凑揍楱湊腠輳丸䀓䎠奿汍紈肒芄骫𡚺气氕朵躲哚䤪剁垛趓跺挆桗尮䒳鳬鳧。

新增以下字元：
餸圐圙。

## 2014/06/01

修改以下字元：
噴羵墳憤馩蕡獖翸橨蟦僨燌袮䇂㤥𠫓竊漓禽噙擒檎蠄離籬灕璃黐禺萬邁厲蠣勵礪躉寓偶隅藕遇齲褵樆麶瞝蘺囄螭縭摛蓠醨魑喁禑顒庽癘蠆勱巁糲蠇髃耦鰅嵎齵堣顒萭偊鄅瑀属瞩嘱楀蝺竬踽。

新增以下字元：
矋。

## 2014/05/29

修改以下字元：
莽蟒漭卉奔泋枿倴錛喯逩莾蠎捹餴渀叱覀莭冟髄随囑矚哎严屵。

## 2014/05/28

修改以下字元：
咳豥奒頦陔侅賌峐輆晐姟烗郂硋啻嘀啇偙膪鶙媂碲鍗楴崹褅腣遆熵螪謪滳墒甋樀豴墑歒蔏蔐藡。

## 2014/05/24

修改以下字元：
旁徬螃鎊嵭滂塝嗙耪覫縍嫎鱜。

## 2014/05/22

修改以下字元：
妾接椄倿鯜踥淁帹唼菨翣霎豙毅顡藙竞竜篭滝槞。

## 2014/05/21

修改以下字元：
瞳曈徸墥犝燑勭矓櫳躘蠬贚鑨巄爖徿龖龎龒龏驡竉靇龗𪚥𪚜𪚞𪚠𪚢。

新增以下字元：
𪚕。

## 2014/05/20

修改以下字元：
亲噺澵媇櫬瀙儭嚫寴藽。

新增以下字元：
𡤅。

## 2014/05/13

修改以下字元：
廦鸊糪鼊薜蘗鷿隦壀檗檘澼礔礕繴嬖躃躄幦。

## 2014/05/12

修改以下字元：
屖搱遟謘稺橭嫴縡榟蠥櫱孼糱嶭躠糵蘖甓憵擗襞噼孹鐴鐾。

## 2014/05/11

修改以下字元：
咅㳸埖蒊外廤。

## 2014/05/06

修改以下字元：
萻湆隌偣噷嬜摬樈璄癔鐿澺嬑燱鏱墇竷遧暲鱆騿嬂蘵竸競蔁噾罯辭莘梓鋅辜宰滓薛孽辟譬癖擘劈璧壁避闢臂僻霹辡辧辬辦辨辮辯瓣新薪親騂㳯厗乵垶峷辝辞辠辢辥辣辤闫闭问闯闰闲间闷闸闹闺闻。

## 2014/05/01

修改以下字元：
嬾舌舐甜恬憩憇甛舏舑舚舓舕舙餂湉狧栝銛曔虁夔浪娘狼琅郎啷廊瑯榔螂鎯朗羪烺硠躴朖誏蒗崀艆哴桹駺莨埌俍稂酿鋃筤悢蜋剆勆欴嫏蓈𠺘藷藴门闩闪鶕。

新增以下字元：
𦧺𦧲塱。

內木一郎發佈「1.明體」試用版，版本資訊爲Version 2.001。

## 2014/04/23

修改以下字元：
类奧奥粤葬髒敖鼇鰲贅傲遨熬嗷聱嶅獒獓廒鷔厫璈隞嚽磝螯嗸慠摮嫯驁鏊滶謷謸蔜熙艕艵致緻畘凟砈矾訊蝨汛阠軐籸𦝠贏嬴羸蠃臝驘鸁籯籝瀛攍巩筑茿恐㧬䅃銎蛩跫鞏築蒆篫盲肓忘忙望茫芒妄罔吂盳蝄骿胼詼脄拻咴洃炭羰碳湠周哛唣忝舔添婖菾掭㖭亟極殛窱鎥処处揝喒糌枴拐䤢产𠩺乲狰峥挣净朡朊朌朏朐朓朣朖朜朠朦朧朎朒朙朚朤塑溯嫺萌樃嗍搠愬蒴遡鎙槊癇襉蕑鐗橌瞯鷳覵鬜礀繝㵎撊僩燗譋憪曌琞奛奣焽橗有朝嘲潮廟謿羞饈鱃嘣奐換喚瑍煥瘓渙愌寏夐藑䎞觪蚌邦綁肨挷垹梆帮幚㥁㠩𡿬㲃㺬钔。

新增以下字元：
舤杧巟𠻹𠽌踭朘擝朥脷敻邻唥𥄫。

## 2014/04/22

新增以下字元：
為偽蒍溈媯𠼮。

## 2014/04/19

修改以下字元：
躺淌㭻賞嘗常棠當堂掌党黨牚䟫裳嚐償嫦瞠螳膛鏜擋噹襠鐺檔撐撑鱨瑺蟐鏛傥鎲儻钂讜曭爣欓戃灙矘攩漟樘糛鞺鏜隚摚蹚憆饄鑜贘鏿橖饓譡艡澢璫礑蟷儅鼞闛甞簹闣橕𨅝𦈹敝鼈黹黺黻黼頖翳偃堰鼴鶠甌瓯岖軀躯躽欧殴奁鴎枢妪呕駆沤抠陋𨹟䁥悘嫕蠮瞖鷖黳瑿贀嫛繄毉椻愝隁鰋褗蓲貙檶塸瞘眍剾傴伛慪怄膒鏂饇醧躬躮躰躶軄軅軆軈。

新增以下字元：
𦉘罉鐣礃幥劏𡁻捝涚敚。

## 2014/04/18

修改以下字元：
夜液㖡腋掖鵺焲鐵廷庭脡挺鋌艇霆蜓懲癥淫霪朢郢驖戜𢧜𢧤綎榳烶筳頲誔莛梃鼮閮侹涏娗珽藢婬狅負兔冤寃菟偩焰陷餡諂燄惂蜭錎欿輡淊埳掐鵮啗臽萏窞閻櫩爓讇嚪壛垝桅脆蛫詭頠鮠㔃蕖乬巪韾韴韷韸韽韼害割瞎轄豁鶷嗐搳螛磍縖犗鎋憲幰瀗櫶攇藼砉剨湱騞㓞契恝洯挈栔絜蛪觢齧楔鍥喫猰禊揳偰碶稧褉瘈瘛潔噄緳囓窫葜㮝蠶鬵簪嶜撍㔆碰踫譜掽湴諩兼禄渌邍虧圬粵夸跨鄂愕顎鰐釫綔鮬荂咵陓鴮摦迃咢崿遌諤齶雩芌扝肟脎閷蔱䓭。

新增以下字元：
𡥼嫲嚒嚤嚰。

## 2014/04/15

修改以下字元：
沿鉛船袞滾㕣蔉朶牙穿。

## 2014/04/14

修改以下字元：
㕾㖋㖌㖍㖎㖙㖚㖛㖜㖝㖯㖰㖲㖳㗟㗠㗡㗯㘏㘒撮鏝昪习濯翼穋翣乡乑眾衆聚驟臮潀潨鄹藂懯乶主住駐柱蛀注註炷跓拄麈黈蘣樦䇠軴宔鉒疰妵飳嵀紸罜殶砫乼霔。

## 2014/04/13

修改以下字元：
丸欄朗虜隆塚侮僧免勉勤嘆器墨層屮悔慨憎敏既梅海漢琢穀突練繁臭謹贈逸難辶禸禹禺离禽瓦卩墸乽緒漗樬窻牕摠蟌謥幒鏓研妍笄豜訮雃䶬形型荊荆并併倂拼瓶駢餅迸屏摒軿輧帡箳硎開䴵鐦唜唟总匬堬崳嵛愉揄渝愈歈毹毺牏瑜腧萮逾瘉睮窬羭蝓褕鄃隃蕍覦諭貐踰輸鍮癒騟緰鄉鄕既旣既溉漑概槪慨慨暨曁嘅廄廐厩即卿節櫛鯽唧喞饗揤曏蠁膷塈墍摡鱀穊蔇堲蝍瀄癤㘉擳蠞皀匓鵖澫嚿区医匽卉微溦薇㵟霺媺㐄㒧㓞久灸丰主亡兓刃劑危呕喸㐍。

新增以下字元：
「康熙部首區」及「中日韓部首補充區」所有字元。

## 2014/04/12

修改以下字元：
杀殺剎弒鎩摋查渣猹餷者猪諸都暑渚煮署欄虜隆塚飲礼神祥福福社祉祈祐祖祝禍禎節節穀突練繁羽飯飼館侮僧勉勤卑喝嘆器墨層臭褐視謁謹賓贈逸難響響頻悔憎懲敏既梅海漢琢碑屮飠。

新增以下字元：
櫸糬。

## 2014/04/10

修改以下字元：
悤殖淔埴犆禃稙徝𡸜㥀㨁䐈嗭矗㯰㐆㐈㐦恋弯湾肀艹。

## 2014/04/09

修改以下字元：
類瞋嗔縝闐黰瑱窴衠禛厧傎攧蒖磌搷寘嫃鬒蹎謓稹齻瘨直置悳惪值植。

新增以下字元：
祂。

## 2014/03/03

「I.字坊」（一點字坊）處理人內木一郎開始以「IPA明體補字」爲基礎，增補修改及整理字元。

檢查日文字型在Big5常用字（5401字）區域裏常見的缺字。

修改以下字元：
孓剁偺啪嗯穋羋俞榆喻偷真眞填塡顛顚巔巓慎愼鎮鎭槙槇鷏鷆癲滇青靑清淸晴晴靖靖精精静沉咒甩丫教嘋卻郤腳。

新增以下字元：
躀屘觼讂塭媮。

字型命名作「1.明體」，版本資訊爲Version 2.000。

## 2013/11/15

halasjack公開釋出「IPA明體補字」，並作出說明：「IPA明體含字數量很多，而且是開源的。我在其基礎上，用繁體字替代了缺少的簡體字，對於『发』、『历』等不是一一對應的字，採用自造字，不用一種繁體字代替。經過替代後，又自造了百餘個GB2312的缺字。目前能夠完全顯示GB2312漢字（部份用繁體顯示），能夠滿足一般需要，並含有部份A區和B區漢字。修改了部份日文寫法爲中文寫法。共享出來供有興趣的同仁們再加工。」

IPA原版的「IPAmj明體」字型，收錄CJK基本漢字18072個，擴展A漢字5765個，擴展B漢字25320個，擴展C漢字380個，擴展D漢字108個，未映射的異體等漢字9065個。halasjack的修改版「IPA明體補字」，收錄CJK基本漢字20156個，擴展A漢字5853個，擴展B漢字25289個，擴展C漢字380個，擴展D漢字105個，而9065個未映射的異體等漢字則被利用或刪除了。由此可見，halasjack修改版主要增加了CJK基本漢字2084個，擴展A漢字88個。

## 2013/11/15

IPA以「IPA開放字型授權條款」發佈「IPAmj明體」Ver.002.02。

## 2011/10/26

IPA以「IPA開放字型授權條款」發佈「IPAmj明體」，增補了許多字元，包括不少異體字、日本的人名漢字。

## 2010/02/26

IPA以「IPA開放字型授權條款」發佈「IPAex明體」、「IPAex黑體」兩款開源字型，增補了部份字元。

## 2009/04/20

日本「獨立行政法人情報処理推進機構」（簡稱「IPA」），以符合開放原始碼促進會（Open Source Initiative）開源定義的「IPA開放字型授權條款」（IPA Open Font License），發佈「IPA字型」。字型乃基於林隆男（Takao Hayashi）所設計的「TB明體」和「TB黑體」衍生而成。
